--- a/abnormals_delight/lang/zh_cn.json
+++ b/abnormals_delight/lang/zh_cn.json
@@ -1,51 +1,51 @@
 {
-  "block.abnormals_delight.aspen_cabinet": "白杨木厨柜",
-  "block.abnormals_delight.azalea_cabinet": "杜鹃木厨柜",
-  "block.abnormals_delight.cherry_cabinet": "樱桃木厨柜",
-  "block.abnormals_delight.driftwood_cabinet": "浮木厨柜",
-  "block.abnormals_delight.grimwood_cabinet": "阴郁木厨柜",
-  "block.abnormals_delight.kousa_cabinet": "梾木厨柜",
-  "block.abnormals_delight.maple_cabinet": "枫木厨柜",
-  "block.abnormals_delight.morado_cabinet": "酸枝木厨柜",
-  "block.abnormals_delight.poise_cabinet": "幽仪木厨柜",
-  "block.abnormals_delight.river_cabinet": "桑木厨柜",
-  "block.abnormals_delight.rosewood_cabinet": "花梨木厨柜",
-  "block.abnormals_delight.willow_cabinet": "柳木厨柜",
-  "block.abnormals_delight.wisteria_cabinet": "紫藤木厨柜",
-  "block.abnormals_delight.yucca_cabinet": "丝兰木厨柜",
-  "item.abnormals_delight.adzuki_cake_slice": "红豆蛋糕切片",
+  "block.abnormals_delight.aspen_cabinet": "白楊木廚櫃",
+  "block.abnormals_delight.azalea_cabinet": "杜鵑木廚櫃",
+  "block.abnormals_delight.cherry_cabinet": "櫻桃木廚櫃",
+  "block.abnormals_delight.driftwood_cabinet": "浮木廚櫃",
+  "block.abnormals_delight.grimwood_cabinet": "陰郁木廚櫃",
+  "block.abnormals_delight.kousa_cabinet": "梾木廚櫃",
+  "block.abnormals_delight.maple_cabinet": "楓木廚櫃",
+  "block.abnormals_delight.morado_cabinet": "酸枝木廚櫃",
+  "block.abnormals_delight.poise_cabinet": "幽儀木廚櫃",
+  "block.abnormals_delight.river_cabinet": "桑木廚櫃",
+  "block.abnormals_delight.rosewood_cabinet": "花梨木廚櫃",
+  "block.abnormals_delight.willow_cabinet": "柳木廚櫃",
+  "block.abnormals_delight.wisteria_cabinet": "紫藤木廚櫃",
+  "block.abnormals_delight.yucca_cabinet": "絲蘭木廚櫃",
+  "item.abnormals_delight.adzuki_cake_slice": "紅豆蛋糕切片",
   "item.abnormals_delight.banana_cake_slice": "香蕉蛋糕切片",
-  "item.abnormals_delight.cherry_cookie": "樱桃曲奇",
-  "item.abnormals_delight.cherry_cream_soda": "樱桃奶油苏打",
+  "item.abnormals_delight.cherry_cookie": "櫻桃曲奇",
+  "item.abnormals_delight.cherry_cream_soda": "櫻桃奶油蘇打",
   "item.abnormals_delight.chocolate_cake_slice": "巧克力蛋糕切片",
-  "item.abnormals_delight.cooked_duck_fillet": "熟鸭肉片",
-  "item.abnormals_delight.cooked_perch_slice": "熟鲈鱼片",
-  "item.abnormals_delight.cooked_pike_slice": "熟狗鱼片",
+  "item.abnormals_delight.cooked_duck_fillet": "熟鴨肉片",
+  "item.abnormals_delight.cooked_perch_slice": "熟鱸魚片",
+  "item.abnormals_delight.cooked_pike_slice": "熟狗魚片",
   "item.abnormals_delight.cooked_venison_shanks": "熟鹿大腿肉",
-  "item.abnormals_delight.duck_fillet": "生鸭肉片",
-  "item.abnormals_delight.duck_noodles": "鸭肉面",
-  "item.abnormals_delight.dune_platter": "沙丘拼盘",
-  "item.abnormals_delight.escargot": "法式蜗牛",
-  "item.abnormals_delight.maple_cookie": "枫糖曲奇",
-  "item.abnormals_delight.maple_glazed_bacon": "枫糖浇汁培根",
+  "item.abnormals_delight.duck_fillet": "生鴨肉片",
+  "item.abnormals_delight.duck_noodles": "鴨肉面",
+  "item.abnormals_delight.dune_platter": "沙丘拼盤",
+  "item.abnormals_delight.escargot": "法式蝸牛",
+  "item.abnormals_delight.maple_cookie": "楓糖曲奇",
+  "item.abnormals_delight.maple_glazed_bacon": "楓糖澆汁培根",
   "item.abnormals_delight.mint_cake_slice": "薄荷蛋糕切片",
   "item.abnormals_delight.mulberry_cookie": "桑葚曲奇",
-  "item.abnormals_delight.necromium_knife": "死灵合金刀",
-  "item.abnormals_delight.passion_aloe_nectar": "百香芦荟花蜜",
-  "item.abnormals_delight.passionfruit_glazed_duck": "百香果浇汁鸭肉",
-  "item.abnormals_delight.perch_slice": "生鲈鱼片",
-  "item.abnormals_delight.perch_with_mushrooms": "蘑菇炖鲈鱼",
-  "item.abnormals_delight.pickerelweed_juice": "梭鱼草汁",
-  "item.abnormals_delight.pike_slice": "生狗鱼片",
-  "item.abnormals_delight.pike_with_beetroot": "甜菜根炖狗鱼",
-  "item.abnormals_delight.seared_venison": "烧鹿排",
-  "item.abnormals_delight.silver_knife": "银刀",
-  "item.abnormals_delight.slabdish": "板鱼餐",
+  "item.abnormals_delight.necromium_knife": "死靈合金刀",
+  "item.abnormals_delight.passion_aloe_nectar": "百香蘆薈花蜜",
+  "item.abnormals_delight.passionfruit_glazed_duck": "百香果澆汁鴨肉",
+  "item.abnormals_delight.perch_slice": "生鱸魚片",
+  "item.abnormals_delight.perch_with_mushrooms": "蘑菇燉鱸魚",
+  "item.abnormals_delight.pickerelweed_juice": "梭魚草汁",
+  "item.abnormals_delight.pike_slice": "生狗魚片",
+  "item.abnormals_delight.pike_with_beetroot": "甜菜根燉狗魚",
+  "item.abnormals_delight.seared_venison": "燒鹿排",
+  "item.abnormals_delight.silver_knife": "銀刀",
+  "item.abnormals_delight.slabdish": "板魚餐",
   "item.abnormals_delight.strawberry_cake_slice": "草莓蛋糕切片",
   "item.abnormals_delight.vanilla_cake_slice": "香草蛋糕切片",
   "item.abnormals_delight.venison_shanks": "生鹿大腿肉",
-  "item.abnormals_delight.venison_with_bamboo_shoots": "竹笋炖鹿肉",
-  "item.abnormals_delight.yucca_gateau_slice": "丝兰果大蛋糕切片",
-  "itemGroup.abnormals_delight": "农夫乐事",
-  "tooltip.abnormals_delight.slabdish.when_feeding": "喂给已驯服的板鱼时："
+  "item.abnormals_delight.venison_with_bamboo_shoots": "竹筍燉鹿肉",
+  "item.abnormals_delight.yucca_gateau_slice": "絲蘭果大蛋糕切片",
+  "itemGroup.abnormals_delight": "農夫樂事",
+  "tooltip.abnormals_delight.slabdish.when_feeding": "喂給已馴服的板魚時："
 }
