--- a/abnormals_delight/lang/zh_cn.json
+++ b/abnormals_delight/lang/zh_cn.json
@@ -23,7 +23,7 @@
   "item.abnormals_delight.cooked_pike_slice": "熟狗魚片",
   "item.abnormals_delight.cooked_venison_shanks": "熟鹿大腿肉",
   "item.abnormals_delight.duck_fillet": "生鴨肉片",
-  "item.abnormals_delight.duck_noodles": "鴨肉面",
+  "item.abnormals_delight.duck_noodles": "鴨肉麵",
   "item.abnormals_delight.dune_platter": "沙丘拼盤",
   "item.abnormals_delight.escargot": "法式蝸牛",
   "item.abnormals_delight.maple_cookie": "楓糖曲奇",
