--- a/abundance/lang/zh_cn.json
+++ b/abundance/lang/zh_cn.json
@@ -3,94 +3,94 @@
   "block.abundance.lavender": "薰衣草",
   "block.abundance.tall_lavender": "高薰衣草",
   "item.abundance.lavender": "薰衣草",
-  "block.abundance.lavender_basket": "筐装薰衣草",
+  "block.abundance.lavender_basket": "筐裝薰衣草",
   "item.abundance.lavender_blossoms": "薰衣草花",
   "block.abundance.lavender_blossom_carpet": "薰衣草花地毯",
   "item.abundance.lavender_salad": "薰衣草沙拉",
   "item.abundance.lavender_tea": "薰衣草茶",
   "effect.abundance.supportive": "支援",
   "_comment1": "Marigolds",
-  "block.abundance.sunny_marigold": "阳生金盏花",
-  "block.abundance.shady_marigold": "阴生金盏花",
-  "block.abundance.tall_marigold": "高金盏花",
-  "block.abundance.potted_sunny_marigold": "阳生金盏花盆栽",
-  "block.abundance.potted_shady_marigold": "阴生金盏花盆栽",
+  "block.abundance.sunny_marigold": "陽生金盞花",
+  "block.abundance.shady_marigold": "陰生金盞花",
+  "block.abundance.tall_marigold": "高金盞花",
+  "block.abundance.potted_sunny_marigold": "陽生金盞花盆栽",
+  "block.abundance.potted_shady_marigold": "陰生金盞花盆栽",
   "_comment2": "Jacaranda Trees",
-  "block.abundance.stripped_jacaranda_log": "去皮蓝花楹原木",
-  "block.abundance.jacaranda_log": "蓝花楹原木",
-  "block.abundance.stripped_jacaranda_wood": "去皮蓝花楹木",
-  "block.abundance.jacaranda_wood": "蓝花楹木",
-  "block.abundance.jacaranda_planks": "蓝花楹木板",
-  "block.abundance.jacaranda_slab": "蓝花楹木台阶",
-  "block.abundance.jacaranda_stairs": "蓝花楹木楼梯",
-  "block.abundance.jacaranda_pressure_plate": "蓝花楹木压力板",
-  "block.abundance.jacaranda_fence": "蓝花楹木栅栏",
-  "block.abundance.jacaranda_fence_gate": "蓝花楹木栅栏门",
-  "block.abundance.jacaranda_button": "蓝花楹木按钮",
-  "block.abundance.jacaranda_trapdoor": "蓝花楹木活板门",
-  "block.abundance.jacaranda_door": "蓝花楹木门",
-  "block.abundance.jacaranda_sign": "蓝花楹木告示牌",
-  "block.abundance.jacaranda_leaves": "蓝花楹树叶",
-  "block.abundance.jacaranda_sapling": "蓝花楹树苗",
-  "block.abundance.jacaranda_leaf_carpet": "蓝花楹树叶地毯",
-  "block.abundance.jacaranda_bookshelf": "蓝花楹木书架",
-  "block.abundance.jacaranda_chest": "蓝花楹木箱子",
-  "block.abundance.jacaranda_trapped_chest": "蓝花楹木陷阱箱",
-  "block.abundance.jacaranda_ladder": "蓝花楹木梯子",
-  "block.abundance.jacaranda_vertical_slab": "蓝花楹木竖直台阶",
-  "block.abundance.vertical_jacaranda_planks": "竖纹蓝花楹木板",
-  "block.abundance.jacaranda_hedge": "蓝花楹树篱",
-  "block.abundance.budding_jacaranda_hedge": "含苞蓝花楹树篱",
-  "block.abundance.flowering_jacaranda_hedge": "开花蓝花楹树篱",
-  "block.abundance.jacaranda_post": "蓝花楹木杆",
-  "block.abundance.stripped_jacaranda_post": "去皮蓝花楹木杆",
-  "block.abundance.jacaranda_beehive": "蓝花楹木蜂箱",
-  "block.abundance.potted_jacaranda_sapling": "蓝花楹树苗盆栽",
-  "item.abundance.jacaranda_boat": "蓝花楹木船",
-  "block.abundance.budding_jacaranda_leaves": "含苞蓝花楹树叶",
-  "block.abundance.flowering_jacaranda_leaves": "开花蓝花楹树叶",
-  "block.abundance.budding_jacaranda_leaf_carpet": "含苞蓝花楹树叶地毯",
-  "block.abundance.flowering_jacaranda_leaf_carpet": "开花蓝花楹树叶地毯",
+  "block.abundance.stripped_jacaranda_log": "去皮藍花楹原木",
+  "block.abundance.jacaranda_log": "藍花楹原木",
+  "block.abundance.stripped_jacaranda_wood": "去皮藍花楹木",
+  "block.abundance.jacaranda_wood": "藍花楹木",
+  "block.abundance.jacaranda_planks": "藍花楹木板",
+  "block.abundance.jacaranda_slab": "藍花楹木半磚",
+  "block.abundance.jacaranda_stairs": "藍花楹木樓梯",
+  "block.abundance.jacaranda_pressure_plate": "藍花楹木壓力板",
+  "block.abundance.jacaranda_fence": "藍花楹木柵欄",
+  "block.abundance.jacaranda_fence_gate": "藍花楹木柵欄門",
+  "block.abundance.jacaranda_button": "藍花楹木按鈕",
+  "block.abundance.jacaranda_trapdoor": "藍花楹木地板門",
+  "block.abundance.jacaranda_door": "藍花楹木門",
+  "block.abundance.jacaranda_sign": "藍花楹木告示牌",
+  "block.abundance.jacaranda_leaves": "藍花楹樹葉",
+  "block.abundance.jacaranda_sapling": "藍花楹樹苗",
+  "block.abundance.jacaranda_leaf_carpet": "藍花楹樹葉地毯",
+  "block.abundance.jacaranda_bookshelf": "藍花楹木書架",
+  "block.abundance.jacaranda_chest": "藍花楹木箱子",
+  "block.abundance.jacaranda_trapped_chest": "藍花楹木陷阱箱",
+  "block.abundance.jacaranda_ladder": "藍花楹木梯子",
+  "block.abundance.jacaranda_vertical_slab": "藍花楹木豎直半磚",
+  "block.abundance.vertical_jacaranda_planks": "豎紋藍花楹木板",
+  "block.abundance.jacaranda_hedge": "藍花楹樹籬",
+  "block.abundance.budding_jacaranda_hedge": "含苞藍花楹樹籬",
+  "block.abundance.flowering_jacaranda_hedge": "開花藍花楹樹籬",
+  "block.abundance.jacaranda_post": "藍花楹木桿",
+  "block.abundance.stripped_jacaranda_post": "去皮藍花楹木桿",
+  "block.abundance.jacaranda_beehive": "藍花楹木蜂箱",
+  "block.abundance.potted_jacaranda_sapling": "藍花楹樹苗盆栽",
+  "item.abundance.jacaranda_boat": "藍花楹木船",
+  "block.abundance.budding_jacaranda_leaves": "含苞藍花楹樹葉",
+  "block.abundance.flowering_jacaranda_leaves": "開花藍花楹樹葉",
+  "block.abundance.budding_jacaranda_leaf_carpet": "含苞藍花楹樹葉地毯",
+  "block.abundance.flowering_jacaranda_leaf_carpet": "開花藍花楹樹葉地毯",
   "_comment3": "Redbud Trees",
-  "block.abundance.stripped_redbud_log": "去皮紫荆原木",
-  "block.abundance.redbud_log": "紫荆原木",
-  "block.abundance.stripped_redbud_wood": "去皮紫荆木",
-  "block.abundance.redbud_wood": "紫荆木",
-  "block.abundance.redbud_planks": "紫荆木板",
-  "block.abundance.redbud_slab": "紫荆木台阶",
-  "block.abundance.redbud_stairs": "紫荆木楼梯",
-  "block.abundance.redbud_pressure_plate": "紫荆木压力板",
-  "block.abundance.redbud_fence": "紫荆木栅栏",
-  "block.abundance.redbud_fence_gate": "紫荆木栅栏门",
-  "block.abundance.redbud_button": "紫荆木按钮",
-  "block.abundance.redbud_trapdoor": "紫荆木活板门",
-  "block.abundance.redbud_door": "紫荆木门",
-  "block.abundance.redbud_sign": "紫荆木告示牌",
-  "block.abundance.redbud_leaves": "紫荆树叶",
-  "block.abundance.redbud_sapling": "紫荆树苗",
-  "block.abundance.redbud_leaf_carpet": "紫荆树叶地毯",
-  "block.abundance.redbud_bookshelf": "紫荆木书架",
-  "block.abundance.redbud_chest": "紫荆木箱子",
-  "block.abundance.redbud_trapped_chest": "紫荆木陷阱箱",
-  "block.abundance.redbud_ladder": "紫荆木梯子",
-  "block.abundance.redbud_vertical_slab": "紫荆木竖直台阶",
-  "block.abundance.vertical_redbud_planks": "竖纹紫荆木板",
-  "block.abundance.redbud_hedge": "紫荆树篱",
-  "block.abundance.budding_redbud_hedge": "含苞紫荆树篱",
-  "block.abundance.flowering_redbud_hedge": "开花紫荆树篱",
-  "block.abundance.redbud_post": "紫荆木杆",
-  "block.abundance.stripped_redbud_post": "去皮紫荆木杆",
-  "block.abundance.redbud_beehive": "紫荆木蜂箱",
-  "block.abundance.potted_redbud_sapling": "紫荆树苗盆栽",
-  "item.abundance.redbud_boat": "紫荆木船",
-  "block.abundance.budding_redbud_leaves": "含苞紫荆树叶",
-  "block.abundance.budding_redbud_leaf_carpet": "含苞紫荆树叶地毯",
-  "block.abundance.flowering_redbud_leaves": "开花紫荆树叶",
-  "block.abundance.flowering_redbud_leaf_carpet": "开花紫荆树叶地毯",
-  "block.abundance.flowering_redbud_log": "开花紫荆原木",
-  "block.abundance.flowering_redbud_wood": "开花紫荆木",
-  "block.abundance.flowering_redbud_sapling": "开花紫荆树苗",
-  "block.abundance.potted_flowering_redbud_sapling": "开花紫荆树苗盆栽",
+  "block.abundance.stripped_redbud_log": "去皮紫荊原木",
+  "block.abundance.redbud_log": "紫荊原木",
+  "block.abundance.stripped_redbud_wood": "去皮紫荊木",
+  "block.abundance.redbud_wood": "紫荊木",
+  "block.abundance.redbud_planks": "紫荊木板",
+  "block.abundance.redbud_slab": "紫荊木半磚",
+  "block.abundance.redbud_stairs": "紫荊木樓梯",
+  "block.abundance.redbud_pressure_plate": "紫荊木壓力板",
+  "block.abundance.redbud_fence": "紫荊木柵欄",
+  "block.abundance.redbud_fence_gate": "紫荊木柵欄門",
+  "block.abundance.redbud_button": "紫荊木按鈕",
+  "block.abundance.redbud_trapdoor": "紫荊木地板門",
+  "block.abundance.redbud_door": "紫荊木門",
+  "block.abundance.redbud_sign": "紫荊木告示牌",
+  "block.abundance.redbud_leaves": "紫荊樹葉",
+  "block.abundance.redbud_sapling": "紫荊樹苗",
+  "block.abundance.redbud_leaf_carpet": "紫荊樹葉地毯",
+  "block.abundance.redbud_bookshelf": "紫荊木書架",
+  "block.abundance.redbud_chest": "紫荊木箱子",
+  "block.abundance.redbud_trapped_chest": "紫荊木陷阱箱",
+  "block.abundance.redbud_ladder": "紫荊木梯子",
+  "block.abundance.redbud_vertical_slab": "紫荊木豎直半磚",
+  "block.abundance.vertical_redbud_planks": "豎紋紫荊木板",
+  "block.abundance.redbud_hedge": "紫荊樹籬",
+  "block.abundance.budding_redbud_hedge": "含苞紫荊樹籬",
+  "block.abundance.flowering_redbud_hedge": "開花紫荊樹籬",
+  "block.abundance.redbud_post": "紫荊木桿",
+  "block.abundance.stripped_redbud_post": "去皮紫荊木桿",
+  "block.abundance.redbud_beehive": "紫荊木蜂箱",
+  "block.abundance.potted_redbud_sapling": "紫荊樹苗盆栽",
+  "item.abundance.redbud_boat": "紫荊木船",
+  "block.abundance.budding_redbud_leaves": "含苞紫荊樹葉",
+  "block.abundance.budding_redbud_leaf_carpet": "含苞紫荊樹葉地毯",
+  "block.abundance.flowering_redbud_leaves": "開花紫荊樹葉",
+  "block.abundance.flowering_redbud_leaf_carpet": "開花紫荊樹葉地毯",
+  "block.abundance.flowering_redbud_log": "開花紫荊原木",
+  "block.abundance.flowering_redbud_wood": "開花紫荊木",
+  "block.abundance.flowering_redbud_sapling": "開花紫荊樹苗",
+  "block.abundance.potted_flowering_redbud_sapling": "開花紫荊樹苗盆栽",
   "_comment4": "Biomes & Mobs",
   "entity.abundance.slabfish.type.lavender_fields": "薰衣草花田",
   "entity.abundance.slabfish.type.nemophila_fields": "喜林草花田",
@@ -98,49 +98,49 @@
   "biome.abundance.lavender_forest": "薰衣草森林",
   "biome.abundance.nemophila_fields": "喜林草花田",
   "_comment5": "Saguaro Cactus",
-  "block.abundance.saguaro_cactus": "树形仙人掌",
-  "block.abundance.small_saguaro_cactus": "小树形仙人掌",
-  "block.abundance.saguaro_sprout": "树形仙人掌苗",
-  "block.abundance.potted_saguaro_sprout": "树形仙人掌苗盆栽",
-  "block.abundance.saguaro_flower": "树形仙人掌花",
-  "item.abundance.saguaro_flower": "树形仙人掌花",
+  "block.abundance.saguaro_cactus": "樹形仙人掌",
+  "block.abundance.small_saguaro_cactus": "小樹形仙人掌",
+  "block.abundance.saguaro_sprout": "樹形仙人掌苗",
+  "block.abundance.potted_saguaro_sprout": "樹形仙人掌苗盆栽",
+  "block.abundance.saguaro_flower": "樹形仙人掌花",
+  "item.abundance.saguaro_flower": "樹形仙人掌花",
   "effect.abundance.succumbing": "屈服",
   "_comment6": "Flowers",
-  "block.abundance.amaranthus": "苋菜",
+  "block.abundance.amaranthus": "莧菜",
   "block.abundance.chicory": "菊苣",
   "block.abundance.nemophila": "喜林草",
   "block.abundance.purple_african_daisy": "紫色非洲菊",
-  "block.abundance.yellow_african_daisy": "黄色非洲菊",
-  "block.abundance.potted_amaranthus": "苋菜盆栽",
+  "block.abundance.yellow_african_daisy": "黃色非洲菊",
+  "block.abundance.potted_amaranthus": "莧菜盆栽",
   "block.abundance.potted_chicory": "菊苣盆栽",
   "block.abundance.potted_nemophila": "喜林草盆栽",
   "block.abundance.potted_purple_african_daisy": "紫色非洲菊盆栽",
-  "block.abundance.potted_yellow_african_daisy": "黄色非洲菊盆栽",
+  "block.abundance.potted_yellow_african_daisy": "黃色非洲菊盆栽",
   "_comment7": "Misc",
-  "item.abundance.sunflower_seeds": "向日葵种子",
-  "block.abundance.sunflower_seed_sack": "袋装向日葵种子",
+  "item.abundance.sunflower_seeds": "向日葵種子",
+  "block.abundance.sunflower_seed_sack": "袋裝向日葵種子",
   "_comment8": "Potions",
-  "item.minecraft.potion.effect.succumbing": "屈服药水",
-  "item.minecraft.potion.effect.succumbing_strong": "屈服药水",
-  "item.minecraft.potion.effect.succumbing_long": "屈服药水",
-  "item.minecraft.splash_potion.effect.succumbing": "喷溅型屈服药水",
-  "item.minecraft.splash_potion.effect.succumbing_strong": "喷溅型屈服药水",
-  "item.minecraft.splash_potion.effect.succumbing_long": "喷溅型屈服药水",
-  "item.minecraft.lingering_potion.effect.succumbing": "滞留型屈服药水",
-  "item.minecraft.lingering_potion.effect.succumbing_strong": "滞留型屈服药水",
-  "item.minecraft.lingering_potion.effect.succumbing_long": "滞留型屈服药水",
+  "item.minecraft.potion.effect.succumbing": "屈服藥水",
+  "item.minecraft.potion.effect.succumbing_strong": "屈服藥水",
+  "item.minecraft.potion.effect.succumbing_long": "屈服藥水",
+  "item.minecraft.splash_potion.effect.succumbing": "噴濺型屈服藥水",
+  "item.minecraft.splash_potion.effect.succumbing_strong": "噴濺型屈服藥水",
+  "item.minecraft.splash_potion.effect.succumbing_long": "噴濺型屈服藥水",
+  "item.minecraft.lingering_potion.effect.succumbing": "滯留型屈服藥水",
+  "item.minecraft.lingering_potion.effect.succumbing_strong": "滯留型屈服藥水",
+  "item.minecraft.lingering_potion.effect.succumbing_long": "滯留型屈服藥水",
   "item.minecraft.tipped_arrow.effect.succumbing": "屈服之箭",
   "item.minecraft.tipped_arrow.effect.succumbing_strong": "屈服之箭",
   "item.minecraft.tipped_arrow.effect.succumbing_long": "屈服之箭",
-  "item.minecraft.potion.effect.supportive": "支援药水",
-  "item.minecraft.potion.effect.supportive_strong": "支援药水",
-  "item.minecraft.potion.effect.supportive_long": "支援药水",
-  "item.minecraft.splash_potion.effect.supportive": "喷溅型支援药水",
-  "item.minecraft.splash_potion.effect.supportive_strong": "喷溅型支援药水",
-  "item.minecraft.splash_potion.effect.supportive_long": "喷溅型支援药水",
-  "item.minecraft.lingering_potion.effect.supportive": "滞留型支援药水",
-  "item.minecraft.lingering_potion.effect.supportive_strong": "滞留型支援药水",
-  "item.minecraft.lingering_potion.effect.supportive_long": "滞留型支援药水",
+  "item.minecraft.potion.effect.supportive": "支援藥水",
+  "item.minecraft.potion.effect.supportive_strong": "支援藥水",
+  "item.minecraft.potion.effect.supportive_long": "支援藥水",
+  "item.minecraft.splash_potion.effect.supportive": "噴濺型支援藥水",
+  "item.minecraft.splash_potion.effect.supportive_strong": "噴濺型支援藥水",
+  "item.minecraft.splash_potion.effect.supportive_long": "噴濺型支援藥水",
+  "item.minecraft.lingering_potion.effect.supportive": "滯留型支援藥水",
+  "item.minecraft.lingering_potion.effect.supportive_strong": "滯留型支援藥水",
+  "item.minecraft.lingering_potion.effect.supportive_long": "滯留型支援藥水",
   "item.minecraft.tipped_arrow.effect.supportive": "支援之箭",
   "item.minecraft.tipped_arrow.effect.supportive_strong": "支援之箭",
   "item.minecraft.tipped_arrow.effect.supportive_long": "支援之箭"
