--- a/additional_lights/lang/zh_tw.json
+++ b/additional_lights/lang/zh_tw.json
@@ -10,14 +10,14 @@
   "additional_lights.txt.block.pedestal.sneaking": "- §9潛行放置：§r放置熄滅狀態的光源，且光源拒絕紅石信號控制",
   "additional_lights.txt.block.pedestal.signals": "- §9直接放置：§r放置點燃狀態的光源，且光源支持紅石信號控制",
   "item.additional_lights.soul_wand": "靈魂之杖",
-  "block.additional_lights.al_lamp_acacia_planks": "金合歡木燈",
+  "block.additional_lights.al_lamp_acacia_planks": "相思木燈",
   "block.additional_lights.al_lamp_birch_planks": "白樺木燈",
   "block.additional_lights.al_lamp_oak_planks": "橡木燈",
   "block.additional_lights.al_lamp_dark_oak_planks": "黑橡木燈",
   "block.additional_lights.al_lamp_jungle_planks": "叢林木燈",
   "block.additional_lights.al_lamp_spruce_planks": "杉木燈",
-  "block.additional_lights.al_lamp_crimson_planks": "緋紅木燈",
-  "block.additional_lights.al_lamp_warped_planks": "詭異木燈",
+  "block.additional_lights.al_lamp_crimson_planks": "緋紅蕈燈",
+  "block.additional_lights.al_lamp_warped_planks": "扭曲蕈燈",
   "block.additional_lights.al_lamp_stone": "石燈",
   "block.additional_lights.al_lamp_cobblestone": "石頭燈",
   "block.additional_lights.al_lamp_mossy_cobblestone": "青苔鵝卵石燈",
@@ -33,14 +33,14 @@
   "block.additional_lights.al_lamp_red_nether_bricks": "紅色地獄磚燈",
   "block.additional_lights.al_lamp_sandstone": "砂岩燈",
   "block.additional_lights.al_lamp_blackstone": "黑石燈",
-  "block.additional_lights.al_torch_acacia_planks": "金合歡木火把",
+  "block.additional_lights.al_torch_acacia_planks": "相思木火把",
   "block.additional_lights.al_torch_birch_planks": "白樺木火把",
   "block.additional_lights.al_torch_oak_planks": "橡木火把",
-  "block.additional_lights.al_torch_dark_oak_planks": "深色橡木火把",
+  "block.additional_lights.al_torch_dark_oak_planks": "黑橡木火把",
   "block.additional_lights.al_torch_jungle_planks": "叢林木火把",
   "block.additional_lights.al_torch_spruce_planks": "杉木火把",
-  "block.additional_lights.al_torch_crimson_planks": "緋紅木火把",
-  "block.additional_lights.al_torch_warped_planks": "詭異木火把",
+  "block.additional_lights.al_torch_crimson_planks": "緋紅蕈火把",
+  "block.additional_lights.al_torch_warped_planks": "扭曲蕈火把",
   "block.additional_lights.al_torch_stone": "石火把",
   "block.additional_lights.al_torch_cobblestone": "石頭火把",
   "block.additional_lights.al_torch_mossy_cobblestone": "青苔鵝卵石火把",
@@ -83,7 +83,7 @@
   "block.additional_lights.fire_pit_s_cut_sandstone": "切制砂岩火盆",
   "block.additional_lights.fire_pit_s_polished_blackstone": "拋光黑石火盆",
   "block.additional_lights.fire_pit_l_stone_bricks": "石磚高火盆",
-  "block.additional_lights.fire_pit_l_mossy_stone_bricks": "青苔鵝卵石磚高火盆",
+  "block.additional_lights.fire_pit_l_mossy_stone_bricks": "青苔石磚高火盆",
   "block.additional_lights.fire_pit_l_end_stone_bricks": "終界石磚高火盆",
   "block.additional_lights.fire_pit_l_nether_bricks": "地獄磚高火盆",
   "block.additional_lights.fire_pit_l_red_nether_bricks": "紅色地獄磚高火盆",
@@ -93,7 +93,7 @@
   "block.additional_lights.fire_pit_l_polished_granite": "拋光花崗岩高火盆",
   "block.additional_lights.fire_pit_l_stone": "石高火盆",
   "block.additional_lights.fire_pit_l_cobblestone": "石頭高火盆",
-  "block.additional_lights.fire_pit_l_mossy_cobblestone": "青苔鵝卵石高火盆",
+  "block.additional_lights.fire_pit_l_mossy_cobblestone": "青苔石高火盆",
   "block.additional_lights.fire_pit_l_end_stone": "終界石高火盆",
   "block.additional_lights.fire_pit_l_iron_block": "鐵高火盆",
   "block.additional_lights.fire_pit_l_gold_block": "金高火盆",
@@ -105,7 +105,7 @@
   "block.additional_lights.fire_pit_l_cut_sandstone": "切制砂岩高火盆",
   "block.additional_lights.fire_pit_l_polished_blackstone": "拋光黑石高火盆",
   "block.additional_lights.standing_torch_s_stone_bricks": "石磚立式火把",
-  "block.additional_lights.standing_torch_s_mossy_stone_bricks": "青苔鵝卵石磚立式火把",
+  "block.additional_lights.standing_torch_s_mossy_stone_bricks": "青苔石磚立式火把",
   "block.additional_lights.standing_torch_s_end_stone_bricks": "終界石磚立式火把",
   "block.additional_lights.standing_torch_s_nether_bricks": "地獄磚立式火把",
   "block.additional_lights.standing_torch_s_red_nether_bricks": "紅色地獄磚立式火把",
@@ -127,7 +127,7 @@
   "block.additional_lights.standing_torch_s_cut_sandstone": "切制砂岩立式火把",
   "block.additional_lights.standing_torch_s_polished_blackstone": "拋光黑石立式火把",
   "block.additional_lights.standing_torch_l_stone_bricks": "石磚高立式火把",
-  "block.additional_lights.standing_torch_l_mossy_stone_bricks": "青苔鵝卵石磚高立式火把",
+  "block.additional_lights.standing_torch_l_mossy_stone_bricks": "青苔石磚高立式火把",
   "block.additional_lights.standing_torch_l_end_stone_bricks": "終界石磚高立式火把",
   "block.additional_lights.standing_torch_l_nether_bricks": "地獄磚高立式火把",
   "block.additional_lights.standing_torch_l_red_nether_bricks": "紅色地獄磚高立式火把",
