--- a/adorn/lang/zh_tw.json
+++ b/adorn/lang/zh_tw.json
@@ -383,18 +383,18 @@
   "block.adorn.jungle_shelf": "叢林木擱板",
   "block.adorn.jungle_coffee_table": "叢林木咖啡桌",
   "block.adorn.jungle_bench": "叢林木長凳",
-  "block.adorn.acacia_chair": 相思木椅子",
-  "block.adorn.acacia_table": 相思木桌子",
-  "block.adorn.acacia_kitchen_counter": 相思木廚房櫃台",
-  "block.adorn.acacia_kitchen_cupboard": 相思木廚房碗櫃",
-  "block.adorn.acacia_kitchen_sink": 相思木廚房水槽",
-  "block.adorn.acacia_drawer": 相思木抽屜",
-  "block.adorn.acacia_post": 相思木柱子",
-  "block.adorn.acacia_platform": 相思木平台",
-  "block.adorn.acacia_step": 相思木踏台",
-  "block.adorn.acacia_shelf": 相思木擱板",
-  "block.adorn.acacia_coffee_table": 相思木咖啡桌",
-  "block.adorn.acacia_bench": 相思木長凳",
+  "block.adorn.acacia_chair": ""相思木椅子",
+  "block.adorn.acacia_table": ""相思木桌子",
+  "block.adorn.acacia_kitchen_counter": "相思木廚房櫃台",
+  "block.adorn.acacia_kitchen_cupboard": "相思木廚房碗櫃",
+  "block.adorn.acacia_kitchen_sink": "相思木廚房水槽",
+  "block.adorn.acacia_drawer": "相思木抽屜",
+  "block.adorn.acacia_post": "相思木柱子",
+  "block.adorn.acacia_platform": "相思木平台",
+  "block.adorn.acacia_step": "相思木踏台",
+  "block.adorn.acacia_shelf": "相思木擱板",
+  "block.adorn.acacia_coffee_table": "相思木咖啡桌",
+  "block.adorn.acacia_bench": "相思木長凳",
   "block.adorn.dark_oak_chair": "黑橡木椅子",
   "block.adorn.dark_oak_table": "黑橡木桌子",
   "block.adorn.dark_oak_kitchen_counter": "黑橡木廚房櫃台",
