--- a/bagofyurting/lang/zh_cn.json
+++ b/bagofyurting/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
-  "bagofyurting.failure.unload": "空间卸载失败：空间不足",
-  "bagofyurting.failure.load": "未能将该空间装入袋子：无法在有效区域内装载任何方块",
-  "item.bagofyurting.bag_of_yurting": "空间移动袋"
+  "bagofyurting.failure.unload": "空間卸載失敗：空間不足",
+  "bagofyurting.failure.load": "未能將該空間裝入袋子：無法在有效區域內裝載任何方塊",
+  "item.bagofyurting.bag_of_yurting": "空間移動袋"
 }
