--- a/bambooeverything/lang/zh_tw.json
+++ b/bambooeverything/lang/zh_tw.json
@@ -10,15 +10,15 @@
   "block.bambooeverything.bamboo_slab": "竹台階",
   "block.bambooeverything.bamboo_torch": "竹火把",
   "item.bambooeverything.bamboo_raft": "竹筏",
-  "item.bambooeverything.dry_bamboo": "幹制竹子",
-  "block.bambooeverything.dry_bamboo_ladder": "幹制竹梯",
-  "block.bambooeverything.dry_bamboo_fence": "幹制竹柵欄",
-  "block.bambooeverything.dry_bamboo_fence_gate": "幹制竹柵欄門",
-  "block.bambooeverything.dry_bamboo_door": "幹制竹門",
-  "block.bambooeverything.dry_bamboo_trapdoor": "幹制竹活板門",
-  "block.bambooeverything.dry_bamboo_bundle": "幹制竹塊",
-  "block.bambooeverything.dry_bamboo_stairs": "幹制竹樓梯",
-  "block.bambooeverything.dry_bamboo_slab": "幹制竹台階",
-  "block.bambooeverything.dry_bamboo_torch": "幹制竹火把",
-  "item.bambooeverything.dry_bamboo_raft": "幹制竹筏"
+  "item.bambooeverything.dry_bamboo": "乾制竹子",
+  "block.bambooeverything.dry_bamboo_ladder": "乾制竹梯",
+  "block.bambooeverything.dry_bamboo_fence": "乾制竹柵欄",
+  "block.bambooeverything.dry_bamboo_fence_gate": "乾制竹柵欄門",
+  "block.bambooeverything.dry_bamboo_door": "乾制竹門",
+  "block.bambooeverything.dry_bamboo_trapdoor": "乾制竹活板門",
+  "block.bambooeverything.dry_bamboo_bundle": "乾制竹塊",
+  "block.bambooeverything.dry_bamboo_stairs": "乾制竹樓梯",
+  "block.bambooeverything.dry_bamboo_slab": "乾制竹台階",
+  "block.bambooeverything.dry_bamboo_torch": "乾制竹火把",
+  "item.bambooeverything.dry_bamboo_raft": "乾制竹筏"
 }
