--- a/bayou_blues/lang/zh_tw.json
+++ b/bayou_blues/lang/zh_tw.json
@@ -5,13 +5,13 @@
   "block.bayou_blues.stripped_cypress_wood": "去皮絲柏木",
   "block.bayou_blues.cypress_wood": "絲柏木",
   "block.bayou_blues.cypress_planks": "絲柏木板",
-  "block.bayou_blues.cypress_slab": "絲柏木台階",
+  "block.bayou_blues.cypress_slab": "絲柏木半磚",
   "block.bayou_blues.cypress_stairs": "絲柏木樓梯",
   "block.bayou_blues.cypress_pressure_plate": "絲柏木壓力板",
   "block.bayou_blues.cypress_fence": "絲柏木柵欄",
   "block.bayou_blues.cypress_fence_gate": "絲柏木柵欄門",
   "block.bayou_blues.cypress_button": "絲柏木按鈕",
-  "block.bayou_blues.cypress_trapdoor": "絲柏木活板門",
+  "block.bayou_blues.cypress_trapdoor": "絲柏木地板門",
   "block.bayou_blues.cypress_door": "絲柏木門",
   "block.bayou_blues.cypress_sign": "絲柏木告示牌",
   "block.bayou_blues.cypress_leaves": "絲柏樹葉",
@@ -21,11 +21,11 @@
   "block.bayou_blues.cypress_chest": "絲柏木箱子",
   "block.bayou_blues.cypress_trapped_chest": "絲柏木陷阱箱",
   "block.bayou_blues.cypress_ladder": "絲柏木梯子",
-  "block.bayou_blues.cypress_vertical_slab": "絲柏豎直台階",
+  "block.bayou_blues.cypress_vertical_slab": "絲柏豎直半磚",
   "block.bayou_blues.vertical_cypress_planks": "豎紋絲柏木板",
   "block.bayou_blues.cypress_hedge": "絲柏樹籬",
-  "block.bayou_blues.cypress_post": "絲柏木桿",
-  "block.bayou_blues.stripped_cypress_post": "去皮絲柏木桿",
+  "block.bayou_blues.cypress_post": "絲柏木棒",
+  "block.bayou_blues.stripped_cypress_post": "去皮絲柏木棒",
   "block.bayou_blues.cypress_beehive": "絲柏木蜂箱",
   "block.bayou_blues.potted_cypress_sapling": "絲柏樹苗盆栽",
   "item.bayou_blues.cypress_boat": "絲柏木船",
@@ -73,9 +73,9 @@
   "_comment4": "其他的植物",
   "block.bayou_blues.algae": "水藻",
   "block.bayou_blues.algae_thatch": "水藻團",
-  "block.bayou_blues.algae_thatch_slab": "水藻團台階",
+  "block.bayou_blues.algae_thatch_slab": "水藻團半磚",
   "block.bayou_blues.algae_thatch_stairs": "水藻團樓梯",
-  "block.bayou_blues.algae_thatch_vertical_slab": "水藻團豎直台階",
+  "block.bayou_blues.algae_thatch_vertical_slab": "水藻團豎直半磚",
   "block.bayou_blues.beard_moss_block": "須松羅塊",
   "block.bayou_blues.beard_moss": "須松羅",
   "block.bayou_blues.giant_fern": "巨型蕨"
