--- a/bettas/lang/zh_tw.json
+++ b/bettas/lang/zh_tw.json
@@ -2,9 +2,9 @@
   "entity.bettas.betta_fish": "搏魚",
   "item.bettas.betta_fish": "搏魚",
   "item.bettas.betta_fish_bucket": "搏魚桶",
-  "item.bettas.betta_fish_spawn_egg": "搏魚刷怪蛋",
+  "item.bettas.betta_fish_spawn_egg": "搏魚生怪蛋",
   "item.bettas.blackwater_bottle": "黑水瓶",
   "block.bettas.moss_ball": "苔蘚球",
   "block.bettas.moss_ball_block": "苔蘚球塊",
-  "block.bettas.dried_leaves": "幹樹葉"
+  "block.bettas.dried_leaves": "乾樹葉"
 }
