--- a/babyfat/lang/zh_tw.json
+++ b/babyfat/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
   "item.babyfat.ranchu": "蘭壽金魚",
-  "item.babyfat.ranchu_spawn_egg": "蘭壽金魚刷怪蛋",
+  "item.babyfat.ranchu_spawn_egg": "蘭壽金魚生怪蛋",
   "item.babyfat.ranchu_bucket": "蘭壽金魚桶",
   "entity.babyfat.ranchu": "蘭壽金魚",
   "block.babyfat.water_lettuce": "大薸",
