--- a/barkcarpets/lang/zh_tw.json
+++ b/barkcarpets/lang/zh_tw.json
@@ -7,5 +7,5 @@
   "block.barkcarpets.jungle_bark_carpet": "叢林木樹皮地毯",
   "block.barkcarpets.acacia_bark_carpet": "金合歡木樹皮地毯",
   "block.barkcarpets.crimson_bark_carpet": "緋紅木樹皮地毯",
-  "block.barkcarpets.warped_bark_carpet": "詭異木樹皮地毯"
+  "block.barkcarpets.warped_bark_carpet": "扭曲蕈木樹皮地毯"
 }
