--- a/benched/lang/zh_tw.json
+++ b/benched/lang/zh_tw.json
@@ -5,6 +5,6 @@
   "block.benched.jungle_bench": "叢林木野餐桌",
   "block.benched.bench": "橡木野餐桌",
   "block.benched.spruce_bench": "雲杉木野餐桌",
-  "block.benched.crimson_bench": "緋紅木野餐桌",
-  "block.benched.warped_bench": "詭異木野餐桌"
+  "block.benched.crimson_bench": "緋紅蕈木野餐桌",
+  "block.benched.warped_bench": "扭曲蕈木野餐桌"
 }
