--- a/blue_skies/lang/zh_tw.json
+++ b/blue_skies/lang/zh_tw.json
@@ -56,9 +56,9 @@
   "block.blue_skies.midnight_sandstone": "午夜砂巖",
   "block.blue_skies.chiseled_midnight_sandstone": "鏨制午夜砂巖",
   "block.blue_skies.cut_midnight_sandstone": "切制午夜砂巖",
-  "block.blue_skies.cut_midnight_sandstone_slab": "切制午夜砂巖台階",
+  "block.blue_skies.cut_midnight_sandstone_slab": "切制午夜砂巖半磚",
   "block.blue_skies.smooth_midnight_sandstone": "平滑午夜砂巖",
-  "block.blue_skies.smooth_midnight_sandstone_slab": "平滑午夜砂巖台階",
+  "block.blue_skies.smooth_midnight_sandstone_slab": "平滑午夜砂巖半磚",
   "block.blue_skies.smooth_midnight_sandstone_stairs": "平滑午夜砂巖樓梯",
   "block.blue_skies.midnight_sandstone_wall": "午夜砂巖墻",
   "block.blue_skies.midnight_sandstone_pillar": "午夜砂巖柱",
@@ -142,7 +142,7 @@
   "block.blue_skies.crystal_sandstone": "水晶砂巖",
   "block.blue_skies.chiseled_crystal_sandstone": "鏨制水晶砂巖",
   "block.blue_skies.cut_crystal_sandstone": "切制水晶砂巖",
-  "block.blue_skies.cut_crystal_sandstone_slab": "切制水晶砂巖台階",
+  "block.blue_skies.cut_crystal_sandstone_slab": "切制水晶砂巖半磚",
   "block.blue_skies.smooth_crystal_sandstone": "平滑水晶砂巖",
   "block.blue_skies.smooth_crystal_sandstone_slab": "平滑水晶砂巖階",
   "block.blue_skies.smooth_crystal_sandstone_stairs": "平滑水晶砂巖梯",
@@ -189,13 +189,13 @@
   "block.blue_skies.dusk_door": "暮光木門",
   "block.blue_skies.maple_door": "楓木門",
   "block.blue_skies.cherry_door": "櫻桃木門",
-  "block.blue_skies.bluebright_trapdoor": "藍輝活板門",
-  "block.blue_skies.starlit_trapdoor": "星熒活板門",
-  "block.blue_skies.frostbright_trapdoor": "霜耀活板門",
-  "block.blue_skies.lunar_trapdoor": "明月活板門",
-  "block.blue_skies.dusk_trapdoor": "暮光活板門",
-  "block.blue_skies.maple_trapdoor": "楓木活板門",
-  "block.blue_skies.cherry_trapdoor": "櫻桃活板門",
+  "block.blue_skies.bluebright_trapdoor": "藍輝地板門",
+  "block.blue_skies.starlit_trapdoor": "星熒地板門",
+  "block.blue_skies.frostbright_trapdoor": "霜耀地板門",
+  "block.blue_skies.lunar_trapdoor": "明月地板門",
+  "block.blue_skies.dusk_trapdoor": "暮光地板門",
+  "block.blue_skies.maple_trapdoor": "楓木地板門",
+  "block.blue_skies.cherry_trapdoor": "櫻桃地板門",
   "block.blue_skies.bluebright_ladder": "藍輝木梯子",
   "block.blue_skies.starlit_ladder": "星熒木梯子",
   "block.blue_skies.frostbright_ladder": "霜耀木梯子",
@@ -237,8 +237,8 @@
   "block.blue_skies.maple_button": "楓木按鈕",
   "block.blue_skies.cherry_button": "櫻桃木按鈕",
   "block.blue_skies.moonstone_button": "月長石按鈕",
-  "block.blue_skies.turquoise_lever": "綠松石拉桿",
-  "block.blue_skies.lunar_lever": "明月木拉桿",
+  "block.blue_skies.turquoise_lever": "綠松石拉棒",
+  "block.blue_skies.lunar_lever": "明月木拉棒",
   "block.blue_skies.cherry_grass": "櫻桃草",
   "block.blue_skies.cherry_leaves": "櫻桃樹葉",
   "block.blue_skies.cherry_log": "櫻桃原木",
@@ -253,9 +253,9 @@
   "block.blue_skies.crystallized_wood": "水晶木",
   "block.blue_skies.crystallized_planks": "水晶木板",
   "block.blue_skies.crystallized_door": "水晶門",
-  "block.blue_skies.crystallized_trapdoor": "水晶活板門",
+  "block.blue_skies.crystallized_trapdoor": "水晶地板門",
   "block.blue_skies.crystallized_wall": "水晶墻",
-  "block.blue_skies.crystallized_slab": "水晶台階",
+  "block.blue_skies.crystallized_slab": "水晶半磚",
   "block.blue_skies.crystallized_stairs": "水晶樓梯",
   "block.blue_skies.crystallized_button": "水晶按鈕",
   "block.blue_skies.crystallized_pressure_plate": "水晶壓力板",
@@ -268,27 +268,27 @@
   "block.blue_skies.warding_pearl": "守護珍珠",
   "block.blue_skies.everbright_portal": "永晝之地傳送門方塊",
   "block.blue_skies.everdawn_portal": "恒曉之地傳送門方塊",
-  "block.blue_skies.bluebright_slab": "藍輝木台階",
-  "block.blue_skies.lunar_slab": "明月木台階",
-  "block.blue_skies.cherry_slab": "櫻桃木台階",
-  "block.blue_skies.starlit_slab": "星熒木台階",
-  "block.blue_skies.frostbright_slab": "霜耀木台階",
-  "block.blue_skies.dusk_slab": "暮光木台階",
-  "block.blue_skies.maple_slab": "楓木台階",
-  "block.blue_skies.turquoise_cobblestone_slab": "綠松圓石台階",
-  "block.blue_skies.turquoise_stone_slab": "綠松石台階",
-  "block.blue_skies.mossy_turquoise_cobblestone_slab": "綠松苔石台階",
-  "block.blue_skies.lunar_cobblestone_slab": "明月圓石台階",
-  "block.blue_skies.lunar_stone_slab": "明月石台階",
-  "block.blue_skies.mossy_lunar_cobblestone_slab": "明月苔石台階",
-  "block.blue_skies.turquoise_stonebrick_slab": "綠松石磚台階",
-  "block.blue_skies.mossy_turquoise_stonebrick_slab": "綠松苔磚台階",
-  "block.blue_skies.cracked_turquoise_stonebrick_slab": "裂紋綠松石磚台階",
-  "block.blue_skies.lunar_stonebrick_slab": "明月石磚台階",
-  "block.blue_skies.mossy_lunar_stonebrick_slab": "明月苔磚台階",
-  "block.blue_skies.cracked_lunar_stonebrick_slab": "裂紋明月石磚台階",
-  "block.blue_skies.crystal_sandstone_slab": "水晶砂巖台階",
-  "block.blue_skies.midnight_sandstone_slab": "午夜砂巖台階",
+  "block.blue_skies.bluebright_slab": "藍輝木半磚",
+  "block.blue_skies.lunar_slab": "明月木半磚",
+  "block.blue_skies.cherry_slab": "櫻桃木半磚",
+  "block.blue_skies.starlit_slab": "星熒木半磚",
+  "block.blue_skies.frostbright_slab": "霜耀木半磚",
+  "block.blue_skies.dusk_slab": "暮光木半磚",
+  "block.blue_skies.maple_slab": "楓木半磚",
+  "block.blue_skies.turquoise_cobblestone_slab": "綠松圓石半磚",
+  "block.blue_skies.turquoise_stone_slab": "綠松石半磚",
+  "block.blue_skies.mossy_turquoise_cobblestone_slab": "綠松苔石半磚",
+  "block.blue_skies.lunar_cobblestone_slab": "明月圓石半磚",
+  "block.blue_skies.lunar_stone_slab": "明月石半磚",
+  "block.blue_skies.mossy_lunar_cobblestone_slab": "明月苔石半磚",
+  "block.blue_skies.turquoise_stonebrick_slab": "綠松石磚半磚",
+  "block.blue_skies.mossy_turquoise_stonebrick_slab": "綠松苔磚半磚",
+  "block.blue_skies.cracked_turquoise_stonebrick_slab": "裂紋綠松石磚半磚",
+  "block.blue_skies.lunar_stonebrick_slab": "明月石磚半磚",
+  "block.blue_skies.mossy_lunar_stonebrick_slab": "明月苔磚半磚",
+  "block.blue_skies.cracked_lunar_stonebrick_slab": "裂紋明月石磚半磚",
+  "block.blue_skies.crystal_sandstone_slab": "水晶砂巖半磚",
+  "block.blue_skies.midnight_sandstone_slab": "午夜砂巖半磚",
   "block.blue_skies.bluebright_stairs": "藍輝木樓梯",
   "block.blue_skies.lunar_stairs": "明月木樓梯",
   "block.blue_skies.cherry_stairs": "櫻桃木樓梯",
@@ -351,17 +351,17 @@
   "block.blue_skies.polished_umber_stairs": "磨制焦石樓梯",
   "block.blue_skies.cinderstone_stairs": "余燼石樓梯",
   "block.blue_skies.polished_cinderstone_stairs": "磨制余燼石樓梯",
-  "block.blue_skies.brumble_slab": "龍須藻台階",
-  "block.blue_skies.polished_brumble_slab": "磨制龍須藻台階",
-  "block.blue_skies.polished_brumble_brick_slab": "磨制龍須藻磚台階",
-  "block.blue_skies.taratite_slab": "碧石台階",
-  "block.blue_skies.polished_taratite_slab": "磨制碧石台階",
-  "block.blue_skies.rimestone_slab": "寒石台階",
-  "block.blue_skies.polished_rimestone_slab": "磨制寒石台階",
-  "block.blue_skies.umber_slab": "焦石台階",
-  "block.blue_skies.polished_umber_slab": "磨制焦石台階",
-  "block.blue_skies.cinderstone_slab": "余燼石台階",
-  "block.blue_skies.polished_cinderstone_slab": "磨制余燼石台階",
+  "block.blue_skies.brumble_slab": "龍須藻半磚",
+  "block.blue_skies.polished_brumble_slab": "磨制龍須藻半磚",
+  "block.blue_skies.polished_brumble_brick_slab": "磨制龍須藻磚半磚",
+  "block.blue_skies.taratite_slab": "碧石半磚",
+  "block.blue_skies.polished_taratite_slab": "磨制碧石半磚",
+  "block.blue_skies.rimestone_slab": "寒石半磚",
+  "block.blue_skies.polished_rimestone_slab": "磨制寒石半磚",
+  "block.blue_skies.umber_slab": "焦石半磚",
+  "block.blue_skies.polished_umber_slab": "磨制焦石半磚",
+  "block.blue_skies.cinderstone_slab": "余燼石半磚",
+  "block.blue_skies.polished_cinderstone_slab": "磨制余燼石半磚",
   "block.blue_skies.brumble_wall": "龍須藻墻",
   "block.blue_skies.polished_brumble_wall": "磨制龍須藻墻",
   "block.blue_skies.polished_brumble_brick_wall": "磨制龍須藻磚墻",
@@ -377,8 +377,8 @@
   "block.blue_skies.glowing_blinding_stone": "發光的惑石",
   "block.blue_skies.carved_blinding_stone": "雕刻過的惑石",
   "block.blue_skies.blinding_stone_pillar": "惑石柱",
-  "block.blue_skies.blinding_slab": "惑石台階",
-  "block.blue_skies.glowing_blinding_slab": "發光的惑石台階",
+  "block.blue_skies.blinding_slab": "惑石半磚",
+  "block.blue_skies.glowing_blinding_slab": "發光的惑石半磚",
   "block.blue_skies.blinding_stairs": "惑石樓梯",
   "block.blue_skies.glowing_blinding_stairs": "發光的惑石樓梯",
   "block.blue_skies.blinding_wall": "惑石墻",
@@ -389,10 +389,10 @@
   "block.blue_skies.glowing_nature_stonebrick": "發光的自然石磚",
   "block.blue_skies.carved_nature_stonebrick": "雕刻過的自然石磚",
   "block.blue_skies.nature_stone_pillar": "自然石柱",
-  "block.blue_skies.nature_stone_slab": "自然石台階",
-  "block.blue_skies.glowing_nature_stone_slab": "發光的自然石台階",
-  "block.blue_skies.nature_stonebrick_slab": "自然石磚台階",
-  "block.blue_skies.glowing_nature_stonebrick_slab": "發光的自然石磚台階",
+  "block.blue_skies.nature_stone_slab": "自然石半磚",
+  "block.blue_skies.glowing_nature_stone_slab": "發光的自然石半磚",
+  "block.blue_skies.nature_stonebrick_slab": "自然石磚半磚",
+  "block.blue_skies.glowing_nature_stonebrick_slab": "發光的自然石磚半磚",
   "block.blue_skies.nature_stone_stairs": "自然石樓梯",
   "block.blue_skies.glowing_nature_stone_stairs": "發光的自然石樓梯",
   "block.blue_skies.nature_stonebrick_stairs": "自然石磚樓梯",
@@ -405,10 +405,10 @@
   "block.blue_skies.rough_poison_stonebrick": "粗制毒石磚塊",
   "block.blue_skies.poison_stone_pillar": "毒石柱",
   "block.blue_skies.carved_poison_stonebrick": "雕刻過的毒石磚塊",
-  "block.blue_skies.poison_stone_slab": "毒石台階",
-  "block.blue_skies.glowing_poison_stone_slab": "發光的毒石台階",
-  "block.blue_skies.poison_stonebrick_slab": "毒石磚塊台階",
-  "block.blue_skies.rough_poison_stonebrick_slab": "粗制毒石磚塊台階",
+  "block.blue_skies.poison_stone_slab": "毒石半磚",
+  "block.blue_skies.glowing_poison_stone_slab": "發光的毒石半磚",
+  "block.blue_skies.poison_stonebrick_slab": "毒石磚塊半磚",
+  "block.blue_skies.rough_poison_stonebrick_slab": "粗制毒石磚塊半磚",
   "block.blue_skies.poison_stone_stairs": "毒石樓梯",
   "block.blue_skies.glowing_poison_stone_stairs": "發光的毒石樓梯",
   "block.blue_skies.poison_stonebrick_stairs": "毒石磚塊樓梯",
@@ -416,16 +416,16 @@
   "block.blue_skies.poison_stonebrick_wall": "毒石磚塊墻",
   "block.blue_skies.aquatic_stone": "卵石",
   "block.blue_skies.glowing_aquatic_stone": "發光的卵石",
-  "block.blue_skies.aquatic_slab": "卵石台階",
-  "block.blue_skies.glowing_aquatic_slab": "發光的卵石台階",
+  "block.blue_skies.aquatic_slab": "卵石半磚",
+  "block.blue_skies.glowing_aquatic_slab": "發光的卵石半磚",
   "block.blue_skies.aquatic_stairs": "卵石樓梯",
   "block.blue_skies.glowing_aquatic_stairs": "發光的卵石樓梯",
   "block.blue_skies.aquatic_wall": "卵石墻",
   "block.blue_skies.glowing_aquatic_wall": "發光的卵石墻",
   "block.blue_skies.life_stone": "眾生石",
   "block.blue_skies.glowing_life_stone": "發光的眾生石",
-  "block.blue_skies.life_slab": "眾生石台階",
-  "block.blue_skies.glowing_life_slab": "發光的眾生石台階",
+  "block.blue_skies.life_slab": "眾生石半磚",
+  "block.blue_skies.glowing_life_slab": "發光的眾生石半磚",
   "block.blue_skies.life_stairs": "眾生石樓梯",
   "block.blue_skies.glowing_life_stairs": "發光的眾生石樓梯",
   "block.blue_skies.life_wall": "眾生石墻",
