--- a/brazilian_fields/lang/zh_tw.json
+++ b/brazilian_fields/lang/zh_tw.json
@@ -1,52 +1,52 @@
 {
-  "advancements.coxinha_dourada_advancement.descr": "金炸鸡肉面包！",
-  "advancements.coxinha_dourada_advancement.title": "终极食物",
-  "advancements.getriceandbeans.descr": "经典巴西美食",
-  "advancements.getriceandbeans.title": "巴西豆饭",
-  "advancements.your_rich.descr": "获得一些雷亚尔币",
-  "advancements.your_rich.title": "真金不怕火炼",
+  "advancements.coxinha_dourada_advancement.descr": "金炸雞肉面包！",
+  "advancements.coxinha_dourada_advancement.title": "終極食物",
+  "advancements.getriceandbeans.descr": "經典巴西美食",
+  "advancements.getriceandbeans.title": "巴西豆飯",
+  "advancements.your_rich.descr": "獲得一些雷亞爾幣",
+  "advancements.your_rich.title": "真金不怕火煉",
   "biome.brazilian_fields.brazilian_city": "巴西都市",
   "biome.brazilian_fields.caatinga": "卡廷加群落",
-  "biome.brazilian_fields.ipe_amarelo_plains": "风铃木平原",
-  "block.brazilian_fields.acai_growed": "阿萨伊浆果",
-  "block.brazilian_fields.acai_ice_cream_block": "阿萨伊浆果冰淇淋块",
-  "block.brazilian_fields.acai_palm_heart_log": "阿萨伊棕榈原木",
-  "block.brazilian_fields.asphalt_holes": "带洞沥青",
-  "block.brazilian_fields.asphalt": "沥青",
+  "biome.brazilian_fields.ipe_amarelo_plains": "風鈴木平原",
+  "block.brazilian_fields.acai_growed": "阿薩伊漿果",
+  "block.brazilian_fields.acai_ice_cream_block": "阿薩伊漿果冰淇淋塊",
+  "block.brazilian_fields.acai_palm_heart_log": "阿薩伊棕櫚原木",
+  "block.brazilian_fields.asphalt_holes": "帶洞瀝青",
+  "block.brazilian_fields.asphalt": "瀝青",
   "block.brazilian_fields.caatinga_cactus": "卡廷加仙人掌",
   "block.brazilian_fields.caatinga_dead_bush": "卡廷加枯萎灌木",
-  "block.brazilian_fields.caatinga_sandstone": "卡廷加砂岩",
+  "block.brazilian_fields.caatinga_sandstone": "卡廷加砂巖",
   "block.brazilian_fields.cassava_plant": "木薯植株",
-  "block.brazilian_fields.city_screen": "都市荧屏",
+  "block.brazilian_fields.city_screen": "都市熒屏",
   "block.brazilian_fields.coroa_de_frade": "花座球",
   "block.brazilian_fields.glass_shards": "玻璃碎片",
-  "block.brazilian_fields.guarana_bush": "瓜拉纳灌木",
-  "block.brazilian_fields.ice_guarana_bush": "冰霜瓜拉纳灌木",
+  "block.brazilian_fields.guarana_bush": "瓜拉納灌木",
+  "block.brazilian_fields.ice_guarana_bush": "冰霜瓜拉納灌木",
   "block.brazilian_fields.ipe_amarelo_dandelion": "蒲公英",
-  "block.brazilian_fields.ipe_amarelo_leaves_bottom": "黄花风铃木树藤",
-  "block.brazilian_fields.ipe_amarelo_leaves_carpet": "黄花风铃木树叶地毯",
-  "block.brazilian_fields.ipe_amarelo_leaves_middle": "黄花风铃木树藤",
-  "block.brazilian_fields.ipe_amarelo_leaves_vines": "黄花风铃木树藤",
-  "block.brazilian_fields.ipe_amarelo_leaves": "黄花风铃木树叶",
-  "block.brazilian_fields.mosaic_floor": "马赛克地砖",
-  "block.brazilian_fields.mud_water_filter": "泥制过滤器",
-  "block.brazilian_fields.palm_heart_leaves": "阿萨伊棕榈树叶",
+  "block.brazilian_fields.ipe_amarelo_leaves_bottom": "黃花風鈴木樹藤",
+  "block.brazilian_fields.ipe_amarelo_leaves_carpet": "黃花風鈴木樹葉地毯",
+  "block.brazilian_fields.ipe_amarelo_leaves_middle": "黃花風鈴木樹藤",
+  "block.brazilian_fields.ipe_amarelo_leaves_vines": "黃花風鈴木樹藤",
+  "block.brazilian_fields.ipe_amarelo_leaves": "黃花風鈴木樹葉",
+  "block.brazilian_fields.mosaic_floor": "馬賽克地磚",
+  "block.brazilian_fields.mud_water_filter": "泥制過濾器",
+  "block.brazilian_fields.palm_heart_leaves": "阿薩伊棕櫚樹葉",
   "block.brazilian_fields.soccer_ball": "足球",
   "entity.brazilian_fields.anta": "南美貘",
   "entity.brazilian_fields.capybara": "水豚",
   "entity.brazilian_fields.caramel_wolf": "焦糖犬",
-  "entity.brazilian_fields.curupira": "库鲁皮拉",
-  "entity.brazilian_fields.headless_mule": "无头骡",
-  "entity.brazilian_fields.mico_leao_dourado": "金狮面狨",
-  "entity.brazilian_fields.saci": "萨奇·佩雷雷",
-  "entity.brazilian_fields.toucan": "巨嘴鸟",
-  "item.brazilian_fields.acai_berry": "阿萨伊浆果",
-  "item.brazilian_fields.acai_chocolate": "阿萨伊浆果巧克力",
-  "item.brazilian_fields.acai_ice_cream": "阿萨伊浆果冰淇淋",
-  "item.brazilian_fields.acai_juice": "阿萨伊浆果汁",
-  "item.brazilian_fields.acai_milkshake": "阿萨伊浆果奶昔",
-  "item.brazilian_fields.acai_palm_heart_pie": "棕榈心派",
-  "item.brazilian_fields.acai_palm_heart": "棕榈心",
+  "entity.brazilian_fields.curupira": "庫魯皮拉",
+  "entity.brazilian_fields.headless_mule": "無頭騾",
+  "entity.brazilian_fields.mico_leao_dourado": "金獅面狨",
+  "entity.brazilian_fields.saci": "薩奇·佩雷雷",
+  "entity.brazilian_fields.toucan": "巨嘴鳥",
+  "item.brazilian_fields.acai_berry": "阿薩伊漿果",
+  "item.brazilian_fields.acai_chocolate": "阿薩伊漿果巧克力",
+  "item.brazilian_fields.acai_ice_cream": "阿薩伊漿果冰淇淋",
+  "item.brazilian_fields.acai_juice": "阿薩伊漿果汁",
+  "item.brazilian_fields.acai_milkshake": "阿薩伊漿果奶昔",
+  "item.brazilian_fields.acai_palm_heart_pie": "棕櫚心派",
+  "item.brazilian_fields.acai_palm_heart": "棕櫚心",
   "item.brazilian_fields.anta_spawn_egg": "南美貘刷怪蛋",
   "item.brazilian_fields.black_slipper_boots": "人字拖",
   "item.brazilian_fields.black_slipper_chestplate": "人字拖",
@@ -64,21 +64,21 @@
   "item.brazilian_fields.cashew": "腰果梨",
   "item.brazilian_fields.cassava": "木薯",
   "item.brazilian_fields.cheese_bread": "巴西奶酪面包球",
-  "item.brazilian_fields.coxinha": "炸鸡肉面包",
-  "item.brazilian_fields.curupira_spawn_egg": "库鲁皮拉刷怪蛋",
+  "item.brazilian_fields.coxinha": "炸雞肉面包",
+  "item.brazilian_fields.curupira_spawn_egg": "庫魯皮拉刷怪蛋",
   "item.brazilian_fields.cyan_slipper_boots": "人字拖",
   "item.brazilian_fields.cyan_slipper_chestplate": "人字拖",
   "item.brazilian_fields.cyan_slipper_helmet": "人字拖",
   "item.brazilian_fields.cyan_slipper_leggings": "人字拖",
-  "item.brazilian_fields.golden_coxinha": "金炸鸡肉面包",
+  "item.brazilian_fields.golden_coxinha": "金炸雞肉面包",
   "item.brazilian_fields.green_slipper_boots": "人字拖",
   "item.brazilian_fields.green_slipper_chestplate": "人字拖",
   "item.brazilian_fields.green_slipper_helmet": "人字拖",
   "item.brazilian_fields.green_slipper_leggings": "人字拖",
-  "item.brazilian_fields.guarana_seeds": "瓜拉纳种子",
-  "item.brazilian_fields.guarana_soda": "瓜拉纳汽水",
-  "item.brazilian_fields.guarana": "瓜拉纳",
-  "item.brazilian_fields.headless_mule_spawn_egg": "无头骡刷怪蛋",
+  "item.brazilian_fields.guarana_seeds": "瓜拉納種子",
+  "item.brazilian_fields.guarana_soda": "瓜拉納汽水",
+  "item.brazilian_fields.guarana": "瓜拉納",
+  "item.brazilian_fields.headless_mule_spawn_egg": "無頭騾刷怪蛋",
   "item.brazilian_fields.light_blue_slipper_boots": "人字拖",
   "item.brazilian_fields.light_blue_slipper_chestplate": "人字拖",
   "item.brazilian_fields.light_blue_slipper_helmet": "人字拖",
@@ -91,7 +91,7 @@
   "item.brazilian_fields.magenta_slipper_chestplate": "人字拖",
   "item.brazilian_fields.magenta_slipper_helmet": "人字拖",
   "item.brazilian_fields.magenta_slipper_leggings": "人字拖",
-  "item.brazilian_fields.mico_leao_dourado_spawn_egg": "金狮面狨刷怪蛋",
+  "item.brazilian_fields.mico_leao_dourado_spawn_egg": "金獅面狨刷怪蛋",
   "item.brazilian_fields.orange_slipper_boots": "人字拖",
   "item.brazilian_fields.orange_slipper_chestplate": "人字拖",
   "item.brazilian_fields.orange_slipper_helmet": "人字拖",
@@ -105,14 +105,14 @@
   "item.brazilian_fields.purple_slipper_chestplate": "人字拖",
   "item.brazilian_fields.purple_slipper_helmet": "人字拖",
   "item.brazilian_fields.purple_slipper_leggings": "人字拖",
-  "item.brazilian_fields.real": "雷亚尔币",
+  "item.brazilian_fields.real": "雷亞爾幣",
   "item.brazilian_fields.red_slipper_boots": "人字拖",
   "item.brazilian_fields.red_slipper_chestplate": "人字拖",
   "item.brazilian_fields.red_slipper_helmet": "人字拖",
   "item.brazilian_fields.red_slipper_leggings": "人字拖",
-  "item.brazilian_fields.rice_and_beans": "巴西豆饭",
-  "item.brazilian_fields.saci_spawn_egg": "萨奇·佩雷雷刷怪蛋",
-  "item.brazilian_fields.toucan_spawn_egg": "巨嘴鸟刷怪蛋",
+  "item.brazilian_fields.rice_and_beans": "巴西豆飯",
+  "item.brazilian_fields.saci_spawn_egg": "薩奇·佩雷雷刷怪蛋",
+  "item.brazilian_fields.toucan_spawn_egg": "巨嘴鳥刷怪蛋",
   "item.brazilian_fields.white_slipper_boots": "人字拖",
   "item.brazilian_fields.white_slipper_chestplate": "人字拖",
   "item.brazilian_fields.white_slipper_helmet": "人字拖",
@@ -122,12 +122,12 @@
   "item.brazilian_fields.yellow_slipper_helmet": "人字拖",
   "item.brazilian_fields.yellow_slipper_leggings": "人字拖",
   "subtitles.brazilian_fields.capybara.death": "水豚：死亡",
-  "subtitles.brazilian_fields.capybara.hurt": "水豚：受伤",
+  "subtitles.brazilian_fields.capybara.hurt": "水豚：受傷",
   "subtitles.brazilian_fields.capybara.idle": "水豚：吱吱叫",
-  "subtitles.easter_egg.brazilmeme": "梗言梗语",
+  "subtitles.easter_egg.brazilmeme": "梗言梗語",
   "subtitles.entity.anta.idle": "南美貘：哼叫",
   "subtitles.entity.capybara.death": "水豚：死亡",
-  "subtitles.entity.capybara.hurt": "水豚：受伤",
+  "subtitles.entity.capybara.hurt": "水豚：受傷",
   "subtitles.entity.capybara.idle": "水豚：吱吱叫",
-  "subtitles.entity.curupira.hurt": "库鲁皮拉：受伤"
+  "subtitles.entity.curupira.hurt": "庫魯皮拉：受傷"
 }
