--- a/byg/lang/zh_tw.json
+++ b/byg/lang/zh_tw.json
@@ -123,7 +123,7 @@
   "biomepedia.biomeabout.mobspawns.none": "該生物群系不生成任何生物",
   "biomepedia.biomelist.search": "搜索",
   "biomepedia.desc.block.byg.none": "暫無描述。",
-  "biomepedia.desc.block.byg.pendorite_block": "這是一個潘多拉金塊。你要能搞到一塊這個，那你就有了炫耀的資本了。\n\n諸如“你咋做到的？”“你可太牛逼了”“哇~塞~”等他人的羨慕言語更是不絕於耳。\n\n但不管怎麽說，如果你真合成了一個，做的不錯！:)",
+  "biomepedia.desc.block.byg.pendorite_block": "這是一個潘多拉金塊。你要能搞到一塊這個，那你就有了炫耀的資本了。\n\n諸如“你咋做到的？”“你可太牛逼了”“哇~塞~”等他人的羨慕言語更是不絕於耳。\n\n但不管怎麼說，如果你真合成了一個，做的不錯！:)",
   "biomepedia.intro": "你好！歡迎閱讀你將去的生物群系（簡稱“BYG”）的生物群系百科！你能在這里找到所有與本模組生物群系、方塊、物品、工具等的資料！在右邊那頁上選擇要查閱的資料類型就可以了。\n\n感謝遊玩BYG！<3",
   "biomepedia.intro.options.biomes": "生物群系",
   "biomepedia.intro.options.biomes.hover": "深入了解BYG的生物群系！",
