--- a/beyond_earth/lang/zh_tw.json
+++ b/beyond_earth/lang/zh_tw.json
@@ -52,11 +52,11 @@
   "item.beyond_earth.space_pants": "航天褲",
   "item.beyond_earth.space_boots": "航天靴",
   "item.beyond_earth.space_helmet": "航天頭盔",
-  "item.beyond_earth.netherite_oxygen_mask": "下界合金氧氣面罩",
-  "item.beyond_earth.netherite_space_suit": "下界合金航天服",
-  "item.beyond_earth.netherite_space_pants": "下界合金航天褲",
-  "item.beyond_earth.netherite_space_boots": "下界合金航天靴",
-  "item.beyond_earth.netherite_space_helmet": "下界合金航天頭盔",
+  "item.beyond_earth.netherite_oxygen_mask": "獄髓氧氣面罩",
+  "item.beyond_earth.netherite_space_suit": "獄髓航天服",
+  "item.beyond_earth.netherite_space_pants": "獄髓航天褲",
+  "item.beyond_earth.netherite_space_boots": "獄髓航天靴",
+  "item.beyond_earth.netherite_space_helmet": "獄髓航天頭盔",
   "item.beyond_earth.jet_suit_oxygen_mask": "噴氣式氧氣面罩",
   "item.beyond_earth.jet_helmet": "噴氣式航天頭盔",
   "item.beyond_earth.jet_suit": "噴氣式航天服",
