--- a/bettershields/lang/zh_tw.json
+++ b/bettershields/lang/zh_tw.json
@@ -50,23 +50,23 @@
   "item.bettershields.diamond_shield.magenta": "品紅色鑽石盾牌",
   "item.bettershields.diamond_shield.orange": "橙色鑽石盾牌",
   "item.bettershields.diamond_shield.white": "白色鑽石盾牌",
-  "item.bettershields.netherite_shield": "下界合金盾牌",
-  "item.bettershields.netherite_shield.black": "黑色下界合金盾牌",
-  "item.bettershields.netherite_shield.red": "紅色下界合金盾牌",
-  "item.bettershields.netherite_shield.green": "綠色下界合金盾牌",
-  "item.bettershields.netherite_shield.brown": "棕色下界合金盾牌",
-  "item.bettershields.netherite_shield.blue": "藍色下界合金盾牌",
-  "item.bettershields.netherite_shield.purple": "紫色下界合金盾牌",
-  "item.bettershields.netherite_shield.cyan": "青色下界合金盾牌",
-  "item.bettershields.netherite_shield.light_gray": "淡灰色下界合金盾牌",
-  "item.bettershields.netherite_shield.gray": "灰色下界合金盾牌",
-  "item.bettershields.netherite_shield.pink": "粉紅色下界合金盾牌",
-  "item.bettershields.netherite_shield.lime": "黃綠色下界合金盾牌",
-  "item.bettershields.netherite_shield.yellow": "黃色下界合金盾牌",
-  "item.bettershields.netherite_shield.light_blue": "淡藍色下界合金盾牌",
-  "item.bettershields.netherite_shield.magenta": "品紅色下界合金盾牌",
-  "item.bettershields.netherite_shield.orange": "橙色下界合金盾牌",
-  "item.bettershields.netherite_shield.white": "白色下界合金盾牌",
+  "item.bettershields.netherite_shield": "獄髓盾牌",
+  "item.bettershields.netherite_shield.black": "黑色獄髓盾牌",
+  "item.bettershields.netherite_shield.red": "紅色獄髓盾牌",
+  "item.bettershields.netherite_shield.green": "綠色獄髓盾牌",
+  "item.bettershields.netherite_shield.brown": "棕色獄髓盾牌",
+  "item.bettershields.netherite_shield.blue": "藍色獄髓盾牌",
+  "item.bettershields.netherite_shield.purple": "紫色獄髓盾牌",
+  "item.bettershields.netherite_shield.cyan": "青色獄髓盾牌",
+  "item.bettershields.netherite_shield.light_gray": "淡灰色獄髓盾牌",
+  "item.bettershields.netherite_shield.gray": "灰色獄髓盾牌",
+  "item.bettershields.netherite_shield.pink": "粉紅色獄髓盾牌",
+  "item.bettershields.netherite_shield.lime": "黃綠色獄髓盾牌",
+  "item.bettershields.netherite_shield.yellow": "黃色獄髓盾牌",
+  "item.bettershields.netherite_shield.light_blue": "淡藍色獄髓盾牌",
+  "item.bettershields.netherite_shield.magenta": "品紅色獄髓盾牌",
+  "item.bettershields.netherite_shield.orange": "橙色獄髓盾牌",
+  "item.bettershields.netherite_shield.white": "白色獄髓盾牌",
   "bettershields.shield_damage_reduction": " %d%% 傷害減免",
   "bettershields.shield_blocking": "當格擋時："
 }
