--- a/charm/lang/zh_tw.json
+++ b/charm/lang/zh_tw.json
@@ -1,11 +1,11 @@
 {
-  "block.charm.acacia_barrel": "金合歡木桶",
-  "block.charm.acacia_bookcase": "金合歡木書櫃",
-  "block.charm.acacia_bookshelf": "金合歡木書架",
-  "block.charm.acacia_chest": "金合歡木箱子",
-  "block.charm.acacia_crate": "金合歡木板條箱",
-  "block.charm.acacia_ladder": "金合歡木梯子",
-  "block.charm.acacia_trapped_chest": "金合歡木陷阱箱",
+  "block.charm.acacia_barrel": "相思木桶",
+  "block.charm.acacia_bookcase": "相思木書櫃",
+  "block.charm.acacia_bookshelf": "相思木書架",
+  "block.charm.acacia_chest": "相思木箱子",
+  "block.charm.acacia_crate": "相思木板條箱",
+  "block.charm.acacia_ladder": "相思木梯子",
+  "block.charm.acacia_trapped_chest": "相思木陷阱箱",
   "block.charm.birch_barrel": "白樺木桶",
   "block.charm.birch_bookcase": "白樺木書櫃",
   "block.charm.birch_bookshelf": "白樺木書架",
@@ -13,47 +13,47 @@
   "block.charm.birch_crate": "白樺木板條箱",
   "block.charm.birch_ladder": "白樺木梯子",
   "block.charm.birch_trapped_chest": "白樺木陷阱箱",
-  "block.charm.brain_prismarine": "腦紋海晶石",
-  "block.charm.brain_prismarine_bricks": "腦紋海晶石磚",
-  "block.charm.brain_sea_lantern": "腦紋海晶燈",
+  "block.charm.brain_prismarine": "腦紋海磷石",
+  "block.charm.brain_prismarine_bricks": "腦紋海磷石磚",
+  "block.charm.brain_sea_lantern": "腦紋海燈籠",
   "block.charm.brew_bottle": "釀造瓶？！",
-  "block.charm.bubble_prismarine": "氣泡海晶石",
-  "block.charm.bubble_prismarine_bricks": "氣泡海晶石磚",
-  "block.charm.bubble_sea_lantern": "氣泡海晶燈",
+  "block.charm.bubble_prismarine": "氣泡海磷石",
+  "block.charm.bubble_prismarine_bricks": "氣泡海磷石磚",
+  "block.charm.bubble_sea_lantern": "氣泡海燈籠",
   "block.charm.candle": "蠟燭",
-  "block.charm.crimson_barrel": "緋紅木桶",
-  "block.charm.crimson_bookcase": "緋紅木書櫃",
-  "block.charm.crimson_bookshelf": "緋紅木書架",
-  "block.charm.crimson_chest": "緋紅木箱子",
-  "block.charm.crimson_crate": "緋紅木板條箱",
-  "block.charm.crimson_ladder": "緋紅木梯子",
-  "block.charm.crimson_trapped_chest": "緋紅木陷阱箱",
-  "block.charm.dark_brain_prismarine": "暗腦紋海晶石",
-  "block.charm.dark_bubble_prismarine": "暗氣泡海晶石",
-  "block.charm.dark_fire_prismarine": "暗火海晶石",
-  "block.charm.dark_horn_prismarine": "暗鹿角海晶石",
-  "block.charm.dark_oak_barrel": "深色橡木桶",
-  "block.charm.dark_oak_bookcase": "深色橡木書櫃",
-  "block.charm.dark_oak_bookshelf": "深色橡木書架",
-  "block.charm.dark_oak_chest": "深色橡木箱子",
-  "block.charm.dark_oak_crate": "深色橡木板條箱",
-  "block.charm.dark_oak_ladder": "深色橡木梯子",
-  "block.charm.dark_oak_trapped_chest": "深色橡木陷阱箱",
-  "block.charm.dark_tube_prismarine": "暗管海晶石",
-  "block.charm.ender_pearl_block": "末影珍珠塊",
-  "block.charm.fire_prismarine": "火海晶石",
-  "block.charm.fire_prismarine_bricks": "火海晶石磚",
-  "block.charm.fire_sea_lantern": "火海晶燈",
+  "block.charm.crimson_barrel": "緋紅蕈桶",
+  "block.charm.crimson_bookcase": "緋紅蕈書櫃",
+  "block.charm.crimson_bookshelf": "緋紅蕈書架",
+  "block.charm.crimson_chest": "緋紅蕈箱子",
+  "block.charm.crimson_crate": "緋紅蕈板條箱",
+  "block.charm.crimson_ladder": "緋紅蕈梯子",
+  "block.charm.crimson_trapped_chest": "緋紅蕈陷阱箱",
+  "block.charm.dark_brain_prismarine": "暗腦紋海磷石",
+  "block.charm.dark_bubble_prismarine": "暗氣泡海磷石",
+  "block.charm.dark_fire_prismarine": "暗火海磷石",
+  "block.charm.dark_horn_prismarine": "暗鹿角海磷石",
+  "block.charm.dark_oak_barrel": "黑橡木桶",
+  "block.charm.dark_oak_bookcase": "黑橡木書櫃",
+  "block.charm.dark_oak_bookshelf": "黑橡木書架",
+  "block.charm.dark_oak_chest": "黑橡木箱子",
+  "block.charm.dark_oak_crate": "黑橡木板條箱",
+  "block.charm.dark_oak_ladder": "黑橡木梯子",
+  "block.charm.dark_oak_trapped_chest": "黑橡木陷阱箱",
+  "block.charm.dark_tube_prismarine": "暗管海磷石",
+  "block.charm.ender_pearl_block": "終界珍珠塊",
+  "block.charm.fire_prismarine": "火海磷石",
+  "block.charm.fire_prismarine_bricks": "火海磷石磚",
+  "block.charm.fire_sea_lantern": "火海燈籠",
   "block.charm.fisherman_barrel": "漁夫桶",
-  "block.charm.glowball_blob": "熒光球團",
+  "block.charm.glowball_blob": "螢光球團",
   "block.charm.gold_bars": "金欄桿",
   "block.charm.gold_chain": "金鎖鏈",
   "block.charm.gold_lantern": "金燈籠",
   "block.charm.gold_soul_lantern": "金靈魂燈籠",
   "block.charm.gunpowder_block": "火藥塊",
-  "block.charm.horn_prismarine": "鹿角海晶石",
-  "block.charm.horn_prismarine_bricks": "鹿角海晶石磚",
-  "block.charm.horn_sea_lantern": "鹿角海晶燈",
+  "block.charm.horn_prismarine": "鹿角海磷石",
+  "block.charm.horn_prismarine_bricks": "鹿角海磷石磚",
+  "block.charm.horn_sea_lantern": "鹿角海燈籠",
   "block.charm.jungle_barrel": "叢林木桶",
   "block.charm.jungle_bookcase": "叢林木書櫃",
   "block.charm.jungle_bookshelf": "叢林木書架",
@@ -73,33 +73,33 @@
   "block.charm.redstone_lantern": "紅石燈籠",
   "block.charm.redstone_sand": "紅石沙",
   "block.charm.refined_obsidian": "精煉黑曜石",
-  "block.charm.refined_obsidian_slab": "精煉黑曜石台階",
+  "block.charm.refined_obsidian_slab": "精煉黑曜石半磚",
   "block.charm.refined_obsidian_stairs": "精煉黑曜石樓梯",
   "block.charm.refined_obsidian_wall": "精煉黑曜石墻",
   "block.charm.smooth_glowstone": "平滑熒石",
-  "block.charm.spruce_barrel": "雲杉木桶",
-  "block.charm.spruce_bookcase": "雲杉木書櫃",
-  "block.charm.spruce_bookshelf": "雲杉木書架",
-  "block.charm.spruce_chest": "雲杉木箱子",
-  "block.charm.spruce_crate": "雲杉木板條箱",
-  "block.charm.spruce_ladder": "雲杉木梯子",
-  "block.charm.spruce_trapped_chest": "雲杉木陷阱箱",
+  "block.charm.spruce_barrel": "杉木桶",
+  "block.charm.spruce_bookcase": "杉木書櫃",
+  "block.charm.spruce_bookshelf": "杉木書架",
+  "block.charm.spruce_chest": "杉木箱子",
+  "block.charm.spruce_crate": "杉木板條箱",
+  "block.charm.spruce_ladder": "杉木梯子",
+  "block.charm.spruce_trapped_chest": "杉木陷阱箱",
   "block.charm.sugar_block": "糖塊",
-  "block.charm.tube_prismarine": "管海晶石",
-  "block.charm.tube_prismarine_bricks": "管海晶石磚",
-  "block.charm.tube_sea_lantern": "管海晶燈",
-  "block.charm.warped_barrel": "詭異木桶",
-  "block.charm.warped_bookcase": "詭異木書櫃",
-  "block.charm.warped_bookshelf": "詭異木書架",
-  "block.charm.warped_chest": "詭異木箱子",
-  "block.charm.warped_crate": "詭異木板條箱",
-  "block.charm.warped_ladder": "詭異木梯子",
-  "block.charm.warped_trapped_chest": "詭異木陷阱箱",
+  "block.charm.tube_prismarine": "管海磷石",
+  "block.charm.tube_prismarine_bricks": "管海磷石磚",
+  "block.charm.tube_sea_lantern": "管海燈籠",
+  "block.charm.warped_barrel": "扭曲蕈桶",
+  "block.charm.warped_bookcase": "扭曲蕈書櫃",
+  "block.charm.warped_bookshelf": "扭曲蕈書架",
+  "block.charm.warped_chest": "扭曲蕈箱子",
+  "block.charm.warped_crate": "扭曲蕈板條箱",
+  "block.charm.warped_ladder": "扭曲蕈梯子",
+  "block.charm.warped_trapped_chest": "扭曲蕈陷阱箱",
   "block.charm.woodcutter": "鋸木機",
   "container.charm.crate": "板條箱",
   "container.charm.kiln": "窯爐",
-  "container.charm.portable_crafting_table": "便攜工作台",
-  "container.charm.portable_ender_chest": "便攜末影箱",
+  "container.charm.portable_crafting_table": "隨身工作台",
+  "container.charm.portable_ender_chest": "隨身終界箱",
   "container.charm.woodcutter": "鋸木機",
   "enchantment.charm.acquisition": "收集",
   "enchantment.charm.acquisition.desc": "工具自動拾取掉落物",
@@ -117,21 +117,21 @@
   "item.charm.bat_bucket": "蝙蝠桶",
   "item.charm.beeswax": "蜂蠟",
   "item.charm.coral_squid_bucket": "珊瑚魷魚桶",
-  "item.charm.coral_squid_spawn_egg": "珊瑚魷魚刷怪蛋",
-  "item.charm.endermite_powder": "末影蟎粉",
+  "item.charm.coral_squid_spawn_egg": "珊瑚魷魚生怪蛋",
+  "item.charm.endermite_powder": "終界蟎粉",
   "item.charm.fisherman_barrel": "漁夫木桶",
-  "item.charm.glowball": "熒光球",
-  "item.charm.netherite_nugget": "下界合金粒",
+  "item.charm.glowball": "螢光球",
+  "item.charm.netherite_nugget": "獄髓粒",
   "item.charm.populated_beehive": "蜂蜜農場入門包",
   "item.charm.raid_horn": "襲擊號角",
   "item.charm.suspicious_brew": "迷之釀造",
   "item.charm.repair_cost": "修覆花費：%s",
-  "key.charm.openCraftingTable": "打開便攜工作台",
-  "key.charm.openEnderChest": "打開便攜末影箱",
+  "key.charm.openCraftingTable": "打開隨身工作台",
+  "key.charm.openEnderChest": "打開隨身終界箱",
   "structure.charm.desert_pyramid": "沙漠神殿",
   "structure.charm.igloo": "雪屋",
   "structure.charm.jungle_pyramid": "叢林神殿",
-  "structure.charm.mineshaft": "廢棄礦井",
+  "structure.charm.mineshaft": "廢棄礦坑",
   "structure.charm.ocean_ruin": "海底廢墟",
   "structure.charm.pillager_outpost": "掠奪者前哨站",
   "structure.charm.ruined_portal": "廢棄傳送門",
