--- a/clayworks/lang/zh_tw.json
+++ b/clayworks/lang/zh_tw.json
@@ -1,26 +1,26 @@
 {
   "block.clayworks.black_decorated_pot": "黑色飾紋陶罐",
-  "block.clayworks.black_terracotta_brick_slab": "黑色陶瓦磚台階",
+  "block.clayworks.black_terracotta_brick_slab": "黑色陶瓦磚半磚",
   "block.clayworks.black_terracotta_brick_stairs": "黑色陶瓦磚樓梯",
   "block.clayworks.black_terracotta_brick_wall": "黑色陶瓦磚墻",
   "block.clayworks.black_terracotta_bricks": "黑色陶瓦磚",
-  "block.clayworks.black_terracotta_slab": "黑色陶瓦台階",
+  "block.clayworks.black_terracotta_slab": "黑色陶瓦半磚",
   "block.clayworks.black_terracotta_stairs": "黑色陶瓦樓梯",
   "block.clayworks.black_terracotta_wall": "黑色陶瓦墻",
   "block.clayworks.blue_decorated_pot": "藍色飾紋陶罐",
-  "block.clayworks.blue_terracotta_brick_slab": "藍色陶瓦磚台階",
+  "block.clayworks.blue_terracotta_brick_slab": "藍色陶瓦磚半磚",
   "block.clayworks.blue_terracotta_brick_stairs": "藍色陶瓦磚樓梯",
   "block.clayworks.blue_terracotta_brick_wall": "藍色陶瓦磚墻",
   "block.clayworks.blue_terracotta_bricks": "藍色陶瓦磚",
-  "block.clayworks.blue_terracotta_slab": "藍色陶瓦台階",
+  "block.clayworks.blue_terracotta_slab": "藍色陶瓦半磚",
   "block.clayworks.blue_terracotta_stairs": "藍色陶瓦樓梯",
   "block.clayworks.blue_terracotta_wall": "藍色陶瓦墻",
   "block.clayworks.brown_decorated_pot": "棕色飾紋陶罐",
-  "block.clayworks.brown_terracotta_brick_slab": "棕色陶瓦磚台階",
+  "block.clayworks.brown_terracotta_brick_slab": "棕色陶瓦磚半磚",
   "block.clayworks.brown_terracotta_brick_stairs": "棕色陶瓦磚樓梯",
   "block.clayworks.brown_terracotta_brick_wall": "棕色陶瓦磚墻",
   "block.clayworks.brown_terracotta_bricks": "棕色陶瓦磚",
-  "block.clayworks.brown_terracotta_slab": "棕色陶瓦台階",
+  "block.clayworks.brown_terracotta_slab": "棕色陶瓦半磚",
   "block.clayworks.brown_terracotta_stairs": "棕色陶瓦樓梯",
   "block.clayworks.brown_terracotta_wall": "棕色陶瓦墻",
   "block.clayworks.chiseled_black_terracotta_bricks": "雕紋黑色陶瓦磚",
@@ -42,116 +42,116 @@
   "block.clayworks.chiseled_white_terracotta_bricks": "雕紋白色陶瓦磚",
   "block.clayworks.chiseled_yellow_terracotta_bricks": "雕紋黃色陶瓦磚",
   "block.clayworks.cyan_decorated_pot": "青色飾紋陶罐",
-  "block.clayworks.cyan_terracotta_brick_slab": "青色陶瓦磚台階",
+  "block.clayworks.cyan_terracotta_brick_slab": "青色陶瓦磚半磚",
   "block.clayworks.cyan_terracotta_brick_stairs": "青色陶瓦磚樓梯",
   "block.clayworks.cyan_terracotta_brick_wall": "青色陶瓦磚墻",
   "block.clayworks.cyan_terracotta_bricks": "青色陶瓦磚",
-  "block.clayworks.cyan_terracotta_slab": "青色陶瓦台階",
+  "block.clayworks.cyan_terracotta_slab": "青色陶瓦半磚",
   "block.clayworks.cyan_terracotta_stairs": "青色陶瓦樓梯",
   "block.clayworks.cyan_terracotta_wall": "青色陶瓦墻",
   "block.clayworks.glazed_terracotta": "帶釉陶瓦",
   "block.clayworks.gray_decorated_pot": "灰色飾紋陶罐",
-  "block.clayworks.gray_terracotta_brick_slab": "灰色陶瓦磚台階",
+  "block.clayworks.gray_terracotta_brick_slab": "灰色陶瓦磚半磚",
   "block.clayworks.gray_terracotta_brick_stairs": "灰色陶瓦磚樓梯",
   "block.clayworks.gray_terracotta_brick_wall": "灰色陶瓦磚墻",
   "block.clayworks.gray_terracotta_bricks": "灰色陶瓦磚",
-  "block.clayworks.gray_terracotta_slab": "灰色陶瓦台階",
+  "block.clayworks.gray_terracotta_slab": "灰色陶瓦半磚",
   "block.clayworks.gray_terracotta_stairs": "灰色陶瓦樓梯",
   "block.clayworks.gray_terracotta_wall": "灰色陶瓦墻",
   "block.clayworks.green_decorated_pot": "綠色飾紋陶罐",
-  "block.clayworks.green_terracotta_brick_slab": "綠色陶瓦磚台階",
+  "block.clayworks.green_terracotta_brick_slab": "綠色陶瓦磚半磚",
   "block.clayworks.green_terracotta_brick_stairs": "綠色陶瓦磚樓梯",
   "block.clayworks.green_terracotta_brick_wall": "綠色陶瓦磚墻",
   "block.clayworks.green_terracotta_bricks": "綠色陶瓦磚",
-  "block.clayworks.green_terracotta_slab": "綠色陶瓦台階",
+  "block.clayworks.green_terracotta_slab": "綠色陶瓦半磚",
   "block.clayworks.green_terracotta_stairs": "綠色陶瓦樓梯",
   "block.clayworks.green_terracotta_wall": "綠色陶瓦墻",
   "block.clayworks.kiln": "窯爐",
   "block.clayworks.light_blue_decorated_pot": "淡藍色飾紋陶罐",
-  "block.clayworks.light_blue_terracotta_brick_slab": "淡藍色陶瓦磚台階",
+  "block.clayworks.light_blue_terracotta_brick_slab": "淡藍色陶瓦磚半磚",
   "block.clayworks.light_blue_terracotta_brick_stairs": "淡藍色陶瓦磚樓梯",
   "block.clayworks.light_blue_terracotta_brick_wall": "淡藍色陶瓦磚墻",
   "block.clayworks.light_blue_terracotta_bricks": "淡藍色陶瓦磚",
-  "block.clayworks.light_blue_terracotta_slab": "淡藍色陶瓦台階",
+  "block.clayworks.light_blue_terracotta_slab": "淡藍色陶瓦半磚",
   "block.clayworks.light_blue_terracotta_stairs": "淡藍色陶瓦樓梯",
   "block.clayworks.light_blue_terracotta_wall": "淡藍色陶瓦墻",
   "block.clayworks.light_gray_decorated_pot": "淡灰色飾紋陶罐",
-  "block.clayworks.light_gray_terracotta_brick_slab": "淡灰色陶瓦磚台階",
+  "block.clayworks.light_gray_terracotta_brick_slab": "淡灰色陶瓦磚半磚",
   "block.clayworks.light_gray_terracotta_brick_stairs": "淡灰色陶瓦磚樓梯",
   "block.clayworks.light_gray_terracotta_brick_wall": "淡灰色陶瓦磚墻",
   "block.clayworks.light_gray_terracotta_bricks": "淡灰色陶瓦磚",
-  "block.clayworks.light_gray_terracotta_slab": "淡灰色陶瓦台階",
+  "block.clayworks.light_gray_terracotta_slab": "淡灰色陶瓦半磚",
   "block.clayworks.light_gray_terracotta_stairs": "淡灰色陶瓦樓梯",
   "block.clayworks.light_gray_terracotta_wall": "淡灰色陶瓦墻",
   "block.clayworks.lime_decorated_pot": "黃綠色飾紋陶罐",
-  "block.clayworks.lime_terracotta_brick_slab": "黃綠色陶瓦磚台階",
+  "block.clayworks.lime_terracotta_brick_slab": "黃綠色陶瓦磚半磚",
   "block.clayworks.lime_terracotta_brick_stairs": "黃綠色陶瓦磚樓梯",
   "block.clayworks.lime_terracotta_brick_wall": "黃綠色陶瓦磚墻",
   "block.clayworks.lime_terracotta_bricks": "黃綠色陶瓦磚",
-  "block.clayworks.lime_terracotta_slab": "黃綠色陶瓦台階",
+  "block.clayworks.lime_terracotta_slab": "黃綠色陶瓦半磚",
   "block.clayworks.lime_terracotta_stairs": "黃綠色陶瓦樓梯",
   "block.clayworks.lime_terracotta_wall": "黃綠色陶瓦墻",
   "block.clayworks.magenta_decorated_pot": "品紅色飾紋陶罐",
-  "block.clayworks.magenta_terracotta_brick_slab": "品紅色陶瓦磚台階",
+  "block.clayworks.magenta_terracotta_brick_slab": "品紅色陶瓦磚半磚",
   "block.clayworks.magenta_terracotta_brick_stairs": "品紅色陶瓦磚樓梯",
   "block.clayworks.magenta_terracotta_brick_wall": "品紅色陶瓦磚墻",
   "block.clayworks.magenta_terracotta_bricks": "品紅色陶瓦磚",
-  "block.clayworks.magenta_terracotta_slab": "品紅色陶瓦台階",
+  "block.clayworks.magenta_terracotta_slab": "品紅色陶瓦半磚",
   "block.clayworks.magenta_terracotta_stairs": "品紅色陶瓦樓梯",
   "block.clayworks.magenta_terracotta_wall": "品紅色陶瓦墻",
   "block.clayworks.orange_decorated_pot": "橙色飾紋陶罐",
-  "block.clayworks.orange_terracotta_brick_slab": "橙色陶瓦磚台階",
+  "block.clayworks.orange_terracotta_brick_slab": "橙色陶瓦磚半磚",
   "block.clayworks.orange_terracotta_brick_stairs": "橙色陶瓦磚樓梯",
   "block.clayworks.orange_terracotta_brick_wall": "橙色陶瓦磚墻",
   "block.clayworks.orange_terracotta_bricks": "橙色陶瓦磚",
-  "block.clayworks.orange_terracotta_slab": "橙色陶瓦台階",
+  "block.clayworks.orange_terracotta_slab": "橙色陶瓦半磚",
   "block.clayworks.orange_terracotta_stairs": "橙色陶瓦樓梯",
   "block.clayworks.orange_terracotta_wall": "橙色陶瓦墻",
   "block.clayworks.pink_decorated_pot": "粉紅色飾紋陶罐",
-  "block.clayworks.pink_terracotta_brick_slab": "粉紅色陶瓦磚台階",
+  "block.clayworks.pink_terracotta_brick_slab": "粉紅色陶瓦磚半磚",
   "block.clayworks.pink_terracotta_brick_stairs": "粉紅色陶瓦磚樓梯",
   "block.clayworks.pink_terracotta_brick_wall": "粉紅色陶瓦磚墻",
   "block.clayworks.pink_terracotta_bricks": "粉紅色陶瓦磚",
-  "block.clayworks.pink_terracotta_slab": "粉紅色陶瓦台階",
+  "block.clayworks.pink_terracotta_slab": "粉紅色陶瓦半磚",
   "block.clayworks.pink_terracotta_stairs": "粉紅色陶瓦樓梯",
   "block.clayworks.pink_terracotta_wall": "粉紅色陶瓦墻",
   "block.clayworks.purple_decorated_pot": "紫色飾紋陶罐",
-  "block.clayworks.purple_terracotta_brick_slab": "紫色陶瓦磚台階",
+  "block.clayworks.purple_terracotta_brick_slab": "紫色陶瓦磚半磚",
   "block.clayworks.purple_terracotta_brick_stairs": "紫色陶瓦磚樓梯",
   "block.clayworks.purple_terracotta_brick_wall": "紫色陶瓦磚墻",
   "block.clayworks.purple_terracotta_bricks": "紫色陶瓦磚",
-  "block.clayworks.purple_terracotta_slab": "紫色陶瓦台階",
+  "block.clayworks.purple_terracotta_slab": "紫色陶瓦半磚",
   "block.clayworks.purple_terracotta_stairs": "紫色陶瓦樓梯",
   "block.clayworks.purple_terracotta_wall": "紫色陶瓦墻",
   "block.clayworks.red_decorated_pot": "紅色飾紋陶罐",
-  "block.clayworks.red_terracotta_brick_slab": "紅色陶瓦磚台階",
+  "block.clayworks.red_terracotta_brick_slab": "紅色陶瓦磚半磚",
   "block.clayworks.red_terracotta_brick_stairs": "紅色陶瓦磚樓梯",
   "block.clayworks.red_terracotta_brick_wall": "紅色陶瓦磚墻",
   "block.clayworks.red_terracotta_bricks": "紅色陶瓦磚",
-  "block.clayworks.red_terracotta_slab": "紅色陶瓦台階",
+  "block.clayworks.red_terracotta_slab": "紅色陶瓦半磚",
   "block.clayworks.red_terracotta_stairs": "紅色陶瓦樓梯",
   "block.clayworks.red_terracotta_wall": "紅色陶瓦墻",
-  "block.clayworks.terracotta_brick_slab": "陶瓦磚台階",
+  "block.clayworks.terracotta_brick_slab": "陶瓦磚半磚",
   "block.clayworks.terracotta_brick_stairs": "陶瓦磚樓梯",
   "block.clayworks.terracotta_brick_wall": "陶瓦磚墻",
   "block.clayworks.terracotta_bricks": "陶瓦磚",
-  "block.clayworks.terracotta_slab": "陶瓦台階",
+  "block.clayworks.terracotta_slab": "陶瓦半磚",
   "block.clayworks.terracotta_stairs": "陶瓦樓梯",
   "block.clayworks.terracotta_wall": "陶瓦墻",
   "block.clayworks.white_decorated_pot": "白色飾紋陶罐",
-  "block.clayworks.white_terracotta_brick_slab": "白色陶瓦磚台階",
+  "block.clayworks.white_terracotta_brick_slab": "白色陶瓦磚半磚",
   "block.clayworks.white_terracotta_brick_stairs": "白色陶瓦磚樓梯",
   "block.clayworks.white_terracotta_brick_wall": "白色陶瓦磚墻",
   "block.clayworks.white_terracotta_bricks": "白色陶瓦磚",
-  "block.clayworks.white_terracotta_slab": "白色陶瓦台階",
+  "block.clayworks.white_terracotta_slab": "白色陶瓦半磚",
   "block.clayworks.white_terracotta_stairs": "白色陶瓦樓梯",
   "block.clayworks.white_terracotta_wall": "白色陶瓦墻",
   "block.clayworks.yellow_decorated_pot": "黃色飾紋陶罐",
-  "block.clayworks.yellow_terracotta_brick_slab": "黃色陶瓦磚台階",
+  "block.clayworks.yellow_terracotta_brick_slab": "黃色陶瓦磚半磚",
   "block.clayworks.yellow_terracotta_brick_stairs": "黃色陶瓦磚樓梯",
   "block.clayworks.yellow_terracotta_brick_wall": "黃色陶瓦磚墻",
   "block.clayworks.yellow_terracotta_bricks": "黃色陶瓦磚",
-  "block.clayworks.yellow_terracotta_slab": "黃色陶瓦台階",
+  "block.clayworks.yellow_terracotta_slab": "黃色陶瓦半磚",
   "block.clayworks.yellow_terracotta_stairs": "黃色陶瓦樓梯",
   "block.clayworks.yellow_terracotta_wall": "黃色陶瓦墻",
   "container.clayworks.kiln": "窯爐",
