--- a/cloaked/lang/zh_tw.json
+++ b/cloaked/lang/zh_tw.json
@@ -1,15 +1,15 @@
 {
-  "item.cloaked.cape": "披风",
-  "cape.cloaked.pickaxe": "镐",
+  "item.cloaked.cape": "披風",
+  "cape.cloaked.pickaxe": "鎬",
   "cape.cloaked.creeper": "苦力怕",
   "cape.cloaked.ender": "末影",
   "cape.cloaked.star": "星星",
   "cape.cloaked.prismarine": "海晶石",
   "cape.cloaked.golem": "傀儡",
   "cape.cloaked.piston": "活塞",
-  "cape.cloaked.turtle": "海龟",
+  "cape.cloaked.turtle": "海龜",
   "cape.cloaked.flame": "火焰",
-  "cape.cloaked.thing": "Mojang徽标",
+  "cape.cloaked.thing": "Mojang徽標",
   "cape.cloaked.royal": "皇家",
   "cape.cloaked.fred": "Fred",
   "cape.cloaked.gipple": "Gipple"
