--- a/coldenchants2/lang/zh_tw.json
+++ b/coldenchants2/lang/zh_tw.json
@@ -22,7 +22,7 @@
   "item.coldenchants2.splash_potion.radiance_potion": "煥生藥水",
   "item.coldenchants2.lingering_potion.radiance_potion": "煥生藥水",
   "item.coldenchants2.tipped_arrow.radiance_potion": "煥生藥水",
-  "enchantment.coldenchants2.nether_bane": "下界殺手",
+  "enchantment.coldenchants2.nether_bane": "地獄殺手",
   "enchantment.coldenchants2.blinding": "障目",
   "enchantment.coldenchants2.botanist": "植物學家",
   "enchantment.coldenchants2.bounding": "沖躍",
@@ -30,8 +30,8 @@
   "enchantment.coldenchants2.cleave": "劈砍",
   "enchantment.coldenchants2.counter": "回擊",
   "enchantment.coldenchants2.crit": "重擊",
-  "enchantment.coldenchants2.ender_pull": "末影牽引",
-  "enchantment.coldenchants2.ender_throw": "末影投擲",
+  "enchantment.coldenchants2.ender_pull": "終界牽引",
+  "enchantment.coldenchants2.ender_throw": "終界投擲",
   "enchantment.coldenchants2.escape_artist": "逃出生天",
   "enchantment.coldenchants2.fireball": "火球",
   "enchantment.coldenchants2.firebrand": "火噬",
@@ -90,8 +90,8 @@
   "enchantment.coldenchants2.cleave.desc": "攻擊目標周圍的生物將受到波及並被擊退。",
   "enchantment.coldenchants2.counter.desc": "有一定幾率在受到攻擊後回擊其來源。",
   "enchantment.coldenchants2.crit.desc": "普通攻擊有一定幾率造成暴擊傷害。",
-  "enchantment.coldenchants2.ender_pull.desc": "投擲末影珍珠並擊中目標後會將其拉向你。",
-  "enchantment.coldenchants2.ender_throw.desc": "右擊可擲出末影珍珠。",
+  "enchantment.coldenchants2.ender_pull.desc": "投擲終界珍珠並擊中目標後會將其拉向你。",
+  "enchantment.coldenchants2.ender_throw.desc": "右擊可擲出終界珍珠。",
   "enchantment.coldenchants2.escape_artist.desc": "潛行右擊可將自身傳送至上方的表面。",
   "enchantment.coldenchants2.fireball.desc": "右擊可擲出火球，點燃擊中的目標。",
   "enchantment.coldenchants2.firebrand.desc": "對著火的目標造成額外傷害。",
