--- a/bygonenether/lang/zh_tw.json
+++ b/bygonenether/lang/zh_tw.json
@@ -20,14 +20,14 @@
   "item.bygonenether.withered_basalt": "雕靈玄武巖",
   "item.bygonenether.withered_coal_block": "雕靈煤炭塊",
   "item.bygonenether.withered_quartz_block": "雕靈石英塊",
-  "item.bygonenether.piglin_prisoner_spawn_egg": "豬靈囚犯刷怪蛋",
-  "item.bygonenether.piglin_hunter_spawn_egg": "豬靈獵人刷怪蛋",
-  "item.bygonenether.wex_spawn_egg": "雕靈惱鬼刷怪蛋",
-  "item.bygonenether.warped_enderman_spawn_egg": "詭異終界人刷怪蛋",
-  "item.bygonenether.wraither_spawn_egg": "雕靈死士刷怪蛋",
-  "item.bygonenether.corpor_spawn_egg": "雕靈蠻兵刷怪蛋",
-  "item.bygonenether.wither_skeleton_knight_spawn_egg": "雕靈骷髏騎士刷怪蛋",
-  "item.bygonenether.wither_skeleton_horse_spawn_egg": "雕靈骷髏馬刷怪蛋",
+  "item.bygonenether.piglin_prisoner_spawn_egg": "豬靈囚犯生怪蛋",
+  "item.bygonenether.piglin_hunter_spawn_egg": "豬靈獵人生怪蛋",
+  "item.bygonenether.wex_spawn_egg": "雕靈惱鬼生怪蛋",
+  "item.bygonenether.warped_enderman_spawn_egg": "詭異終界人生怪蛋",
+  "item.bygonenether.wraither_spawn_egg": "雕靈死士生怪蛋",
+  "item.bygonenether.corpor_spawn_egg": "雕靈蠻兵生怪蛋",
+  "item.bygonenether.wither_skeleton_knight_spawn_egg": "雕靈骷髏騎士生怪蛋",
+  "item.bygonenether.wither_skeleton_horse_spawn_egg": "雕靈骷髏馬生怪蛋",
   "item.bygonenether.wither_waltz_music_disc": "音樂唱片",
   "item.bygonenether.wither_waltz_music_disc.desc": "izofar - Wither Waltz",
   "item.bygonenether.warped_ender_pearl": "詭異終界珍珠",
